@@ -17,6 +17,13 @@
 
 package org.keycloak.models.sessions.infinispan;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+
 import org.keycloak.common.util.MultiSiteUtils;
 import org.keycloak.models.AuthenticatedClientSessionModel;
 import org.keycloak.models.ClientModel;
@@ -29,23 +36,17 @@ import org.keycloak.models.sessions.infinispan.changes.SessionsChangelogBasedTra
 import org.keycloak.models.sessions.infinispan.changes.Tasks;
 import org.keycloak.models.sessions.infinispan.changes.UserSessionUpdateTask;
 import org.keycloak.models.sessions.infinispan.entities.AuthenticatedClientSessionEntity;
-import org.keycloak.models.sessions.infinispan.entities.AuthenticatedClientSessionStore;
+import org.keycloak.models.sessions.infinispan.entities.EmbeddedClientSessionKey;
 import org.keycloak.models.sessions.infinispan.entities.UserSessionEntity;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import org.jboss.logging.Logger;
 
 /**
  * @author <a href="mailto:sthorger@redhat.com">Stian Thorgersen</a>
  */
 public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvider> implements UserSessionModel {
+
+    private static final Logger logger = Logger.getLogger(UserSessionAdapter.class);
 
     private final KeycloakSession session;
 
@@ -53,7 +54,7 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
     private final SessionsChangelogBasedTransaction<String, UserSessionEntity> userSessionUpdateTx;
 
-    private final SessionsChangelogBasedTransaction<UUID, AuthenticatedClientSessionEntity> clientSessionUpdateTx;
+    private final SessionsChangelogBasedTransaction<EmbeddedClientSessionKey, AuthenticatedClientSessionEntity> clientSessionUpdateTx;
 
     private final RealmModel realm;
 
@@ -67,7 +68,7 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
     public UserSessionAdapter(KeycloakSession session, UserModel user, T provider,
                               SessionsChangelogBasedTransaction<String, UserSessionEntity> userSessionUpdateTx,
-                              SessionsChangelogBasedTransaction<UUID, AuthenticatedClientSessionEntity> clientSessionUpdateTx,
+                              SessionsChangelogBasedTransaction<EmbeddedClientSessionKey, AuthenticatedClientSessionEntity> clientSessionUpdateTx,
                               RealmModel realm, UserSessionEntity entity, boolean offline) {
         this.session = session;
         this.user = user;
@@ -81,30 +82,28 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
     @Override
     public Map<String, AuthenticatedClientSessionModel> getAuthenticatedClientSessions() {
-        AuthenticatedClientSessionStore clientSessionEntities = entity.getAuthenticatedClientSessions();
+        var clientSessionEntities = entity.getClientSessions();
         Map<String, AuthenticatedClientSessionModel> result = new HashMap<>();
 
         List<String> removedClientUUIDS = new LinkedList<>();
 
-        if (clientSessionEntities != null) {
-            clientSessionEntities.forEach((String key, UUID value) -> {
-                // Check if client still exists
-                ClientModel client = realm.getClientById(key);
-                if (client != null) {
-                    final AuthenticatedClientSessionModel clientSession = provider.getClientSession(this, client, value.toString(), offline);
-                    if (clientSession != null) {
-                        result.put(key, clientSession);
-                    } else {
-                        // Either the client session has expired, or it hasn't been added by a concurrently running login yet.
-                        // So it is unsafe to clear it, so we need to keep it for now. Otherwise, the test ConcurrentLoginTest.concurrentLoginSingleUser will fail.
-                        // removedClientUUIDS.add(key);
-                    }
-                } else {
-                    // client does no longer exist
-                    removedClientUUIDS.add(key);
-                }
-            });
-        }
+        clientSessionEntities.forEach(clientUUID -> {
+            // Check if client still exists
+            ClientModel client = realm.getClientById(clientUUID);
+            if (client == null) {
+                // client does no longer exist
+                removedClientUUIDS.add(clientUUID);
+                return;
+            }
+            var clientSession = provider.getClientSession(this, client, offline);
+            if (clientSession == null) {
+                // Either the client session has expired, or it hasn't been added by a concurrently running login yet.
+                // So it is unsafe to remove it, so we need to keep it for now.
+                // Otherwise, the test ConcurrentLoginTest.concurrentLoginSingleUser will fail.
+                return;
+            }
+            result.put(clientUUID, clientSession);
+        });
 
         removeAuthenticatedClientSessions(removedClientUUIDS);
 
@@ -113,21 +112,16 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
     @Override
     public AuthenticatedClientSessionModel getAuthenticatedClientSessionByClient(String clientUUID) {
-        AuthenticatedClientSessionStore clientSessionEntities = entity.getAuthenticatedClientSessions();
-        final UUID clientSessionId = clientSessionEntities.get(clientUUID);
-
-        if (clientSessionId == null) {
-            return null;
-        }
-
         ClientModel client = realm.getClientById(clientUUID);
 
         if (client != null) {
             // Might return null either the client session has expired, or it hasn't been added by a concurrently running login yet.
             // So it is unsafe to clear it, so we need to keep it for now. Otherwise, the test ConcurrentLoginTest.concurrentLoginSingleUser will fail.
-            return provider.getClientSession(this, client, clientSessionId, offline);
+            return provider.getClientSession(this, client, offline);
         }
 
+        logger.debugf("Client not found. Removing from mappings. userSessionId=%s, clientId=%s, clientSessionId=%s, offline=%s",
+                getId(), clientUUID, new EmbeddedClientSessionKey(getId(), clientUUID), offline);
         removeAuthenticatedClientSessions(Collections.singleton(clientUUID));
         return null;
     }
@@ -137,19 +131,19 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
         if (removedClientUUIDS == null || removedClientUUIDS.isEmpty()) {
             return;
         }
+        logger.debugf("Removing client sessions. clients=%s, offline=%s", removedClientUUIDS, offline);
 
         // do not iterate the removedClientUUIDS and remove the clientSession directly as the addTask can manipulate
         // the collection being iterated, and that can lead to unpredictable behaviour (e.g. NPE)
-        List<UUID> clientSessionUuids = removedClientUUIDS.stream()
-                .map(entity.getAuthenticatedClientSessions()::get)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        List<String> clientSessionUuids = removedClientUUIDS.stream()
+                .filter(entity.getClientSessions()::contains)
+                .toList();
 
         // Update user session
         UserSessionUpdateTask task = new UserSessionUpdateTask() {
             @Override
             public void runUpdate(UserSessionEntity entity) {
-                removedClientUUIDS.forEach(entity.getAuthenticatedClientSessions()::remove);
+                removedClientUUIDS.forEach(entity.getClientSessions()::remove);
             }
 
             @Override
@@ -159,7 +153,7 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
         };
         update(task);
 
-        clientSessionUuids.forEach(clientSessionId -> this.clientSessionUpdateTx.addTask(clientSessionId, Tasks.removeSync(offline)));
+        clientSessionUuids.forEach(clientUUID -> this.clientSessionUpdateTx.addTask(new EmbeddedClientSessionKey(entity.getId(), clientUUID), Tasks.removeSync(offline)));
     }
 
     @Override
@@ -351,6 +345,9 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
     @Override
     public void restartSession(RealmModel realm, UserModel user, String loginUsername, String ipAddress, String authMethod, boolean rememberMe, String brokerSessionId, String brokerUserId) {
+        // Sending a delete statement for each client session may have a performance impact.
+        // The update task will clear the entity.getClientSessions() set.
+        entity.getClientSessions().forEach(clientUUID -> this.clientSessionUpdateTx.addTask(new EmbeddedClientSessionKey(entity.getId(), clientUUID), Tasks.removeSync(offline)));
         UserSessionUpdateTask task = new UserSessionUpdateTask() {
 
             @Override
@@ -364,12 +361,12 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
 
                 entity.setState(null);
                 entity.getNotes().clear();
-                entity.getAuthenticatedClientSessions().clear();
+                entity.getClientSessions().clear();
             }
 
         };
 
-        update(task);
+        userSessionUpdateTx.restartEntity(getId(), task);
     }
 
     @Override
@@ -377,11 +374,10 @@ public class UserSessionAdapter<T extends SessionRefreshStore & UserSessionProvi
         if (this == o) {
             return true;
         }
-        if (o == null || !(o instanceof UserSessionModel)) {
+        if (!(o instanceof UserSessionModel that)) {
             return false;
         }
 
-        UserSessionModel that = (UserSessionModel) o;
         return that.getId().equals(getId());
     }
 
