@@ -17,19 +17,21 @@
 
 package org.keycloak.services.clientpolicy.executor;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
-import org.jboss.logging.Logger;
 import org.keycloak.OAuthErrorException;
 import org.keycloak.models.CibaConfig;
 import org.keycloak.models.Constants;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.protocol.oidc.OIDCConfigAttributes;
-import org.keycloak.representations.idm.ClientRepresentation;
+import org.keycloak.protocol.oidc.utils.RedirectUtils;
 import org.keycloak.representations.idm.ClientPolicyExecutorConfigurationRepresentation;
+import org.keycloak.representations.idm.ClientRepresentation;
 import org.keycloak.services.clientpolicy.ClientPolicyContext;
 import org.keycloak.services.clientpolicy.ClientPolicyException;
 import org.keycloak.services.clientpolicy.context.AdminClientRegisterContext;
@@ -39,17 +41,32 @@ import org.keycloak.services.clientpolicy.context.ClientCRUDContext;
 import org.keycloak.services.clientpolicy.context.DynamicClientRegisterContext;
 import org.keycloak.services.clientpolicy.context.DynamicClientUpdateContext;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
+import org.jboss.logging.Logger;
+
 /**
  * @author <a href="mailto:takashi.norimatsu.ws@hitachi.com">Takashi Norimatsu</a>
  */
-public class SecureClientUrisExecutor implements ClientPolicyExecutorProvider<ClientPolicyExecutorConfigurationRepresentation> {
+public class SecureClientUrisExecutor implements ClientPolicyExecutorProvider<SecureClientUrisExecutor.Configuration> {
 
     private static final Logger logger = Logger.getLogger(SecureClientUrisExecutor.class);
 
     private final KeycloakSession session;
+    private Configuration configuration;
+
 
     public SecureClientUrisExecutor(KeycloakSession session) {
         this.session = session;
+    }
+
+    @Override
+    public void setupConfiguration(Configuration config) {
+        this.configuration = config;
+    }
+
+    @Override
+    public Class<Configuration> getExecutorConfigurationClass() {
+        return Configuration.class;
     }
 
     @Override
@@ -85,38 +102,40 @@ public class SecureClientUrisExecutor implements ClientPolicyExecutorProvider<Cl
                 confirmSecureRedirectUri(((AuthorizationRequestContext)context).getRedirectUri());
                 return;
             default:
-                return;
         }
     }
 
     private void confirmSecureUris(ClientRepresentation clientRep) throws ClientPolicyException {
         // rootUrl
         String rootUrl = clientRep.getRootUrl();
-        if (rootUrl != null) confirmSecureUris(Arrays.asList(rootUrl), "rootUrl");
+        if (rootUrl != null) confirmSecureUris(List.of(rootUrl), "rootUrl");
 
         // adminUrl
         String adminUrl = clientRep.getAdminUrl();
-        if (adminUrl != null) confirmSecureUris(Arrays.asList(adminUrl), "adminUrl");
+        if (adminUrl != null) confirmSecureUris(List.of(adminUrl), "adminUrl");
 
         // baseUrl
         String baseUrl = clientRep.getBaseUrl();
-        if (baseUrl != null) confirmSecureUris(Arrays.asList(baseUrl), "baseUrl");
-
-        // web origins
-        List<String> webOrigins = clientRep.getWebOrigins();
-        if (webOrigins != null) confirmSecureUris(webOrigins, "webOrigins");
+        if (baseUrl != null) confirmSecureUris(List.of(baseUrl), "baseUrl");
 
         // backchannel logout URL
         String logoutUrl = Optional.ofNullable(clientRep.getAttributes()).orElse(Collections.emptyMap()).get(OIDCConfigAttributes.BACKCHANNEL_LOGOUT_URL);
-        if (logoutUrl != null) confirmSecureUris(Arrays.asList(logoutUrl), "logoutUrl");
+        if (logoutUrl != null) confirmSecureUris(List.of(logoutUrl), "logoutUrl");
 
         // OAuth2 : redirectUris
         List<String> redirectUris = clientRep.getRedirectUris();
         if (redirectUris != null) confirmSecureUris(redirectUris, "redirectUris");
 
+        // web origins
+        List<String> webOrigins = clientRep.getWebOrigins();
+        if (webOrigins != null) {
+            List<String> resolvedWebOriginUrls = resolveUrlWithRedirects(webOrigins, redirectUris, rootUrl, true);
+            confirmSecureUris(resolvedWebOriginUrls, "webOrigins");
+        }
+
         // OAuth2 : jwks_uri
         String jwksUri = Optional.ofNullable(clientRep.getAttributes()).orElse(Collections.emptyMap()).get(OIDCConfigAttributes.JWKS_URL);
-        if (jwksUri != null) confirmSecureUris(Arrays.asList(jwksUri), "jwksUri");
+        if (jwksUri != null) confirmSecureUris(List.of(jwksUri), "jwksUri");
 
         // OIDD : requestUris
         List<String> requestUris = getAttributeMultivalued(clientRep, OIDCConfigAttributes.REQUEST_URIS);
@@ -124,7 +143,27 @@ public class SecureClientUrisExecutor implements ClientPolicyExecutorProvider<Cl
 
         // CIBA : client notification endpoint
         String clientNotificationEndpoint = Optional.ofNullable(clientRep.getAttributes()).orElse(Collections.emptyMap()).get(CibaConfig.CIBA_BACKCHANNEL_CLIENT_NOTIFICATION_ENDPOINT);
-        if (clientNotificationEndpoint != null) confirmSecureUris(Arrays.asList(clientNotificationEndpoint), "cibaClientNotificationEndpoint");
+        if (clientNotificationEndpoint != null) confirmSecureUris(List.of(clientNotificationEndpoint), "cibaClientNotificationEndpoint");
+
+        // OIDC: Post Logout URL
+        List<String> postLogoutRedirectUris = getAttributeMultivalued(clientRep, OIDCConfigAttributes.POST_LOGOUT_REDIRECT_URIS);
+        if (postLogoutRedirectUris != null && !postLogoutRedirectUris.isEmpty()) {
+            List<String> validRedirects = clientRep.getRedirectUris() != null ? clientRep.getRedirectUris() : Collections.emptyList();
+            List<String> resolvedPostLogoutUrls = resolveUrlWithRedirects(postLogoutRedirectUris, validRedirects, clientRep.getRootUrl(), false);
+            confirmSecureUris(resolvedPostLogoutUrls, "postLogoutUris");
+        }
+
+        // logoUri
+        String logoUri = Optional.ofNullable(clientRep.getAttributes()).orElse(Collections.emptyMap()).get(OIDCConfigAttributes.LOGO_URI);
+        if (logoUri != null) confirmSecureUris(List.of(logoUri), "logoUri");
+
+        // termsOfServiceUri
+        String termsOfServiceUri = Optional.ofNullable(clientRep.getAttributes()).orElse(Collections.emptyMap()).get(OIDCConfigAttributes.TOS_URI);
+        if (termsOfServiceUri != null) confirmSecureUris(List.of(termsOfServiceUri), "tosUri");
+
+        // policyUri
+        String policyUri = Optional.ofNullable(clientRep.getAttributes()).orElse(Collections.emptyMap()).get(OIDCConfigAttributes.POLICY_URI);
+        if (policyUri != null) confirmSecureUris(List.of(policyUri), "policyUri");
     }
 
     private List<String> getAttributeMultivalued(ClientRepresentation clientRep, String attrKey) {
@@ -139,9 +178,11 @@ public class SecureClientUrisExecutor implements ClientPolicyExecutorProvider<Cl
         }
 
         for (String uri : uris) {
-            logger.tracev("{0} = {1}", uriType, uri);
-            if (!uri.startsWith("https://")  || uri.contains("*")) {
-                throw new ClientPolicyException(OAuthErrorException.INVALID_CLIENT_METADATA, "Invalid " + uriType);
+            if (!uri.isEmpty()) {
+                logger.tracev("{0} = {1}", uriType, uri);
+                if (!uri.startsWith("https://") || uri.contains("*")) {
+                    throw new ClientPolicyException(OAuthErrorException.INVALID_CLIENT_METADATA, "Invalid " + uriType);
+                }
             }
         }
     }
@@ -152,9 +193,37 @@ public class SecureClientUrisExecutor implements ClientPolicyExecutorProvider<Cl
         }
 
         logger.tracev("Redirect URI = {0}", redirectUri);
-        if (!redirectUri.startsWith("https://") || redirectUri.contains("*")) {
+        if (redirectUri.contains("*")) {
             throw new ClientPolicyException(OAuthErrorException.INVALID_REQUEST, "Invalid redirect_uri");
         }
+        if (!redirectUri.startsWith("https://")) {
+            boolean isRedirectToLocalhost = redirectUri.startsWith("http://localhost") || redirectUri.startsWith("http://127.0.0.1");
+            if (!configuration.allowHttpOnLocalhost || !isRedirectToLocalhost) {
+                throw new ClientPolicyException(OAuthErrorException.INVALID_REQUEST, "Invalid redirect_uri");
+            }
+        }
+    }
 
+    private List<String> resolveUrlWithRedirects(List<String> originalUrls, List<String> redirectUris,
+                                                 String rootUrl, boolean returnAsOrigins) {
+        if (originalUrls == null || originalUrls.isEmpty()) {
+            return Collections.emptyList();
+        }
+        Set<String> resolvedUrls = RedirectUtils.resolveUrlsWithRedirects(session, originalUrls, rootUrl, redirectUris, returnAsOrigins);
+        return new ArrayList<>(resolvedUrls);
+    }
+
+    public static class Configuration extends ClientPolicyExecutorConfigurationRepresentation {
+
+        @JsonProperty("allow-http-on-localhost")
+        protected boolean allowHttpOnLocalhost;
+
+        public boolean getAllowHttpOnLocalhost() {
+            return allowHttpOnLocalhost;
+        }
+
+        public void setAllowHttpOnLocalhost(boolean allowHttpOnLocalhost) {
+            this.allowHttpOnLocalhost = allowHttpOnLocalhost;
+        }
     }
 }
