@@ -17,14 +17,12 @@
 
 package org.keycloak.services.clientpolicy.executor;
 
+import java.util.List;
+
 import org.keycloak.Config.Scope;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.KeycloakSessionFactory;
 import org.keycloak.provider.ProviderConfigProperty;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 
 public class SecureSigningAlgorithmForSignedJwtExecutorFactory implements ClientPolicyExecutorProviderFactory {
 
@@ -66,7 +64,7 @@ public class SecureSigningAlgorithmForSignedJwtExecutorFactory implements Client
 
     @Override
     public List<ProviderConfigProperty> getConfigProperties() {
-        return new ArrayList<>(Arrays.asList(REQUIRE_CLIENT_ASSERTION_PROPERTY));
+        return List.of(REQUIRE_CLIENT_ASSERTION_PROPERTY);
     }
 
 }
