@@ -16,14 +16,17 @@
  */
 package org.keycloak.testsuite.actions;
 
-import org.jboss.arquillian.drone.api.annotation.Drone;
+import java.io.Closeable;
+import java.io.IOException;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.MimeMessage;
+
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.authentication.actiontoken.verifyemail.VerifyEmailActionToken;
-import org.jboss.arquillian.graphene.page.Page;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
 import org.keycloak.common.Profile;
 import org.keycloak.common.util.KeycloakUriBuilder;
 import org.keycloak.events.Details;
@@ -33,61 +36,58 @@ import org.keycloak.models.Constants;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.UserModel;
 import org.keycloak.models.UserModel.RequiredAction;
+import org.keycloak.models.credential.PasswordCredentialModel;
 import org.keycloak.models.utils.KeycloakModelUtils;
 import org.keycloak.representations.idm.EventRepresentation;
 import org.keycloak.representations.idm.RealmRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.services.managers.AuthenticationSessionManager;
 import org.keycloak.sessions.RootAuthenticationSessionModel;
-import org.keycloak.testsuite.AssertEvents;
+import org.keycloak.testframework.events.EventAssertion;
+import org.keycloak.testframework.realm.RealmAttributesBuilder;
+import org.keycloak.testframework.realm.UserBuilder;
 import org.keycloak.testsuite.AbstractTestRealmKeycloakTest;
-import org.keycloak.testsuite.admin.ApiUtil;
+import org.keycloak.testsuite.AssertEvents;
+import org.keycloak.testsuite.admin.AdminApiUtil;
 import org.keycloak.testsuite.arquillian.AuthServerTestEnricher;
-import org.keycloak.testsuite.arquillian.annotation.EnableFeature;
 import org.keycloak.testsuite.cluster.AuthenticationSessionFailoverClusterTest;
-import org.keycloak.testsuite.pages.AppPage;
-import org.keycloak.testsuite.pages.AppPage.RequestType;
-import org.keycloak.testsuite.pages.ProceedPage;
 import org.keycloak.testsuite.pages.ErrorPage;
 import org.keycloak.testsuite.pages.InfoPage;
 import org.keycloak.testsuite.pages.LoginPage;
+import org.keycloak.testsuite.pages.LoginPasswordUpdatePage;
+import org.keycloak.testsuite.pages.ProceedPage;
 import org.keycloak.testsuite.pages.RegisterPage;
 import org.keycloak.testsuite.pages.VerifyEmailPage;
 import org.keycloak.testsuite.pages.VerifyProfilePage;
 import org.keycloak.testsuite.updaters.UserAttributeUpdater;
-import org.keycloak.testsuite.util.GreenMailRule;
-import org.keycloak.testsuite.util.InfinispanTestTimeServiceRule;
-import org.keycloak.testsuite.util.SecondBrowser;
-import org.keycloak.testsuite.util.UserBuilder;
 import org.keycloak.testsuite.util.AccountHelper;
-import org.keycloak.testsuite.util.TestAppHelper;
-import org.keycloak.testsuite.util.UserActionTokenBuilder;
+import org.keycloak.testsuite.util.InfinispanTestTimeServiceRule;
+import org.keycloak.testsuite.util.MailServer;
 import org.keycloak.testsuite.util.MailUtils;
-
-import java.io.Closeable;
-import jakarta.mail.MessagingException;
-import jakarta.mail.internet.MimeMessage;
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import org.keycloak.testsuite.util.SecondBrowser;
+import org.keycloak.testsuite.util.TestAppHelper;
+import org.keycloak.testsuite.util.oauth.OAuthClient;
 
 import org.hamcrest.Matchers;
+import org.jboss.arquillian.drone.api.annotation.Drone;
+import org.jboss.arquillian.graphene.page.Page;
 import org.junit.Assume;
-import org.keycloak.testsuite.util.WaitUtils;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 
+import static org.keycloak.authentication.requiredactions.VerifyEmail.EMAIL_RESEND_COOLDOWN_KEY_PREFIX;
+
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author <a href="mailto:sthorger@redhat.com">Stian Thorgersen</a>
@@ -98,13 +98,10 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     public AssertEvents events = new AssertEvents(this);
 
     @Rule
-    public GreenMailRule greenMail = new GreenMailRule();
+    public MailServer mail = new MailServer();
 
     @Rule
     public InfinispanTestTimeServiceRule ispnTestTimeService = new InfinispanTestTimeServiceRule(this);
-
-    @Page
-    protected AppPage appPage;
 
     @Page
     protected LoginPage loginPage;
@@ -117,6 +114,9 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
     @Page
     protected RegisterPage registerPage;
+
+    @Page
+    protected LoginPasswordUpdatePage updatePasswordPage;
 
     @Page
     protected InfoPage infoPage;
@@ -133,6 +133,14 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     @SecondBrowser
     protected WebDriver driver2;
 
+    @Page
+    @SecondBrowser
+    protected LoginPasswordUpdatePage updatePasswordPageSecondBrowser;
+
+    @Page
+    @SecondBrowser
+    protected InfoPage infoPageSecondBrowser;
+
     @Override
     public void configureTestRealm(RealmRepresentation testRealm) {
         testRealm.setVerifyEmail(Boolean.TRUE);
@@ -141,14 +149,21 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
     @Before
     public void before() {
-        ApiUtil.removeUserByUsername(testRealm(), "test-user@localhost");
+        AdminApiUtil.removeUserByUsername(managedRealm.admin(), "test-user@localhost");
         UserRepresentation user = UserBuilder.create().enabled(true)
                 .username("test-user@localhost")
                 .firstName("test-user")
                 .lastName("test-user")
                 .emailVerified(false)
                 .email("test-user@localhost").build();
-        testUserId = ApiUtil.createUserAndResetPasswordWithAdminClient(testRealm(), user, "password");
+        testUserId = AdminApiUtil.createUserAndResetPasswordWithAdminClient(managedRealm.admin(), user, "password");
+
+        clearCooldownForUser();
+    }
+
+    private void clearCooldownForUser() {
+        String cooldownKey = EMAIL_RESEND_COOLDOWN_KEY_PREFIX + testUserId;
+        testingClient.server().run(session -> session.singleUseObjects().remove(cooldownKey));
     }
 
     protected boolean removeVerifyProfileAtImport() {
@@ -160,102 +175,156 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
      * see KEYCLOAK-4163
      */
     @Test
-    public void verifyEmailConfig() throws IOException, MessagingException {
+    public void verifyEmailConfig() throws MessagingException {
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         // see testsuite/integration-arquillian/tests/base/src/test/resources/testrealm.json
-        Assert.assertEquals("<auto+bounces@keycloak.org>", message.getHeader("Return-Path")[0]);
+        Assertions.assertEquals("<auto+bounces@keycloak.org>", message.getHeader("Return-Path")[0]);
         // displayname <email@example.org>
-        Assert.assertEquals("Keycloak SSO <auto@keycloak.org>", message.getHeader("From")[0]);
-        Assert.assertEquals("Keycloak no-reply <reply-to@keycloak.org>", message.getHeader("Reply-To")[0]);
+        Assertions.assertEquals("Keycloak SSO <auto@keycloak.org>", message.getHeader("From")[0]);
+        Assertions.assertEquals("Keycloak no-reply <reply-to@keycloak.org>", message.getHeader("Reply-To")[0]);
     }
 
     @Test
-    public void verifyEmailExisting() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailExisting() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
         String verificationUrl = getEmailLink(message);
 
-        AssertEvents.ExpectedEvent emailEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL).detail("email", "test-user@localhost");
-        EventRepresentation sendEvent = emailEvent.assertEvent();
+        EventAssertion emailEvent = EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL).details("email", "test-user@localhost");
+        EventRepresentation sendEvent = emailEvent.getEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
         driver.navigate().to(verificationUrl.trim());
 
-        events.expectRequiredAction(EventType.VERIFY_EMAIL)
-          .user(testUserId)
-          .detail(Details.USERNAME, "test-user@localhost")
-          .detail(Details.EMAIL, "test-user@localhost")
-          .detail(Details.CODE_ID, mailCodeId)
-          .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.VERIFY_EMAIL)
+          .userId(testUserId)
+          .details(Details.USERNAME, "test-user@localhost")
+          .details(Details.EMAIL, "test-user@localhost")
+          .details(Details.CODE_ID, mailCodeId);
 
-        appPage.assertCurrent();
-        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
-        events.expectLogin().user(testUserId).session(mailCodeId).detail(Details.USERNAME, "test-user@localhost").assertEvent();
+        EventAssertion.expectLoginSuccess(events.poll()).userId(testUserId).sessionId(mailCodeId).details(Details.USERNAME, "test-user@localhost");
     }
 
     @Test
-    public void verifyEmailRegister() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailRegister() throws IOException {
+        oauth.openLoginForm();
         loginPage.clickRegister();
-        registerPage.register("firstName", "lastName", "email@mail.com", "verifyEmail", "password", "password");
+        registerPage.registerWithoutPassword("firstName", "lastName", "email@mail.com", "verifyEmail");
 
-        String userId = events.expectRegister("verifyEmail", "email@mail.com").assertEvent().getUserId();
+        String userId = EventAssertion.expectRegisterSuccess(events.poll()).clientId(oauth.getClientId()).details(Details.USERNAME, "verifyEmail").details(Details.EMAIL, "email@mail.com").getEvent().getUserId();
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
-        EventRepresentation sendEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL).user(userId).detail(Details.USERNAME, "verifyemail").detail("email", "email@mail.com").assertEvent();
+        EventRepresentation sendEvent = EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL).userId(userId).details(Details.USERNAME, "verifyemail").details("email", "email@mail.com").getEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
         String verificationUrl = getEmailLink(message);
 
         driver.navigate().to(verificationUrl.trim());
 
-        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.VERIFY_EMAIL)
+          .userId(userId)
+          .details(Details.USERNAME, "verifyemail")
+          .details(Details.EMAIL, "email@mail.com")
+          .details(Details.CODE_ID, mailCodeId);
 
-        events.expectRequiredAction(EventType.VERIFY_EMAIL)
-          .user(userId)
-          .detail(Details.USERNAME, "verifyemail")
-          .detail(Details.EMAIL, "email@mail.com")
-          .detail(Details.CODE_ID, mailCodeId)
-          .assertEvent();
+        updatePasswordOnChangePasswordPage(updatePasswordPage, userId);
 
-        events.expectLogin().user(userId).session(mailCodeId).detail(Details.USERNAME, "verifyemail").assertEvent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
+
+        EventAssertion.expectLoginSuccess(events.poll()).userId(userId).sessionId(mailCodeId).details(Details.USERNAME, "verifyemail");
+    }
+
+    private void updatePasswordOnChangePasswordPage(LoginPasswordUpdatePage updatePasswordPage, String userId) {
+        updatePasswordPage.assertCurrent();
+        updatePasswordPage.changePassword("password", "password");
+        EventAssertion.assertSuccess(events.poll())
+                .type(EventType.UPDATE_PASSWORD)
+                .hasCodeId()
+                .details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
+                .userId(userId)
+                .withoutDetails(Details.CONSENT);
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_CREDENTIAL)
+                .details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
+                .userId(userId);
     }
 
     @Test
-    public void verifyEmailRegisterSetLocale() throws IOException, MessagingException {
-        RealmRepresentation realm = testRealm().toRepresentation();
+    public void verifyEmailRegisterWithSecondBrowser() throws IOException {
+        oauth.openLoginForm();
+        loginPage.clickRegister();
+        registerPage.registerWithoutPassword("firstName", "lastName", "email-br2@mail.com", "verifyemail-br2");
+
+        String userId = EventAssertion.expectRegisterSuccess(events.poll()).clientId(oauth.getClientId()).details(Details.USERNAME, "verifyemail-br2").details(Details.EMAIL, "email-br2@mail.com").getEvent().getUserId();
+        verifyEmailPage.assertCurrent();
+
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getReceivedMessages()[0];
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL).userId(userId).details(Details.USERNAME, "verifyemail-br2").details("email", "email-br2@mail.com");
+
+        // open link in the second browser without the session and follow the link
+        String verificationUrl = getEmailLink(message);
+        driver2.navigate().to(verificationUrl.trim());
+        final WebElement proceedLink = driver2.findElement(By.linkText("» Click here to proceed"));
+        assertThat(proceedLink, Matchers.notNullValue());
+
+        // check if the initial client is preserved
+        String link = proceedLink.getAttribute("href");
+        assertThat(link, Matchers.containsString("client_id=test-app"));
+        proceedLink.click();
+        events.clear();
+
+        // should update password in the second browser
+        updatePasswordPageSecondBrowser.setDriver(driver2);
+        updatePasswordOnChangePasswordPage(updatePasswordPageSecondBrowser, userId);
+        infoPageSecondBrowser.setDriver(driver2);
+        infoPageSecondBrowser.assertCurrent();
+        Assertions.assertEquals("Your account has been updated.", infoPageSecondBrowser.getInfo());
+
+        // Refresh in the original browser. Authentication session is expired and user needs to login from the beginning
+        infoPage.setDriver(driver);
+        driver.navigate().refresh();
+        loginPage.assertCurrent();
+        Assertions.assertEquals("Your login attempt timed out. Login will start from the beginning.", loginPage.getError());
+        loginPage.login("verifyemail-br2", "password");
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
+    }
+
+    @Test
+    public void verifyEmailRegisterSetLocale() throws IOException {
+        RealmRepresentation realm = managedRealm.admin().toRepresentation();
         realm.setInternationalizationEnabled(true);
         realm.setSupportedLocales(Set.of("en", "pt"));
-        testRealm().update(realm);
-        loginPage.open();
+        managedRealm.admin().update(realm);
+        oauth.openLoginForm();
         loginPage.clickRegister();
         loginPage.openLanguage("Português");
-        registerPage.register("firstName", "lastName", "locale@mail.com", "locale", "password", "password");
+        registerPage.registerWithoutPassword("firstName", "lastName", "locale@mail.com", "locale");
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getReceivedMessages()[0];
         String verificationUrl = getEmailLink(message);
 
         driver.manage().deleteAllCookies();
@@ -265,198 +334,221 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
     @Test
     public void verifyEmailFromAnotherAccountWhenUserIsAuthenticated() throws Exception {
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.clickRegister();
         String username1 = KeycloakModelUtils.generateId();
-        registerPage.register("firstName", "lastName", username1 + "@mail.com", username1, "password", "password");
+        registerPage.registerWithoutPassword("firstName", "lastName", username1 + "@mail.com", username1);
         verifyEmailPage.assertCurrent();
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getReceivedMessages()[0];
         String verificationLink1 = getEmailLink(message);
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.clickRegister();
         String username2 = KeycloakModelUtils.generateId();
-        registerPage.register("firstName", "lastName", username2 + "@mail.com", username2, "password", "password");
+        registerPage.registerWithoutPassword("firstName", "lastName", username2 + "@mail.com", username2);
         verifyEmailPage.assertCurrent();
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
-        message = greenMail.getReceivedMessages()[1];
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
+        message = mail.getReceivedMessages()[1];
         String verificationLink2 = getEmailLink(message);
         driver.navigate().to(verificationLink2.trim());
-        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        updatePasswordPage.assertCurrent();
+        updatePasswordPage.changePassword("password", "password");
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
         driver.navigate().to(verificationLink1.trim());
         assertTrue(errorPage.getError().contains("You are already authenticated as different user"));
-        UserRepresentation user1 = testRealm().users().search(username1).get(0);
-        UserRepresentation user2 = testRealm().users().search(username2).get(0);
+        UserRepresentation user1 = managedRealm.admin().users().search(username1).get(0);
+        UserRepresentation user2 = managedRealm.admin().users().search(username2).get(0);
         assertFalse(user1.isEmailVerified());
         assertTrue(user2.isEmailVerified());
     }
 
     @Test
     public void verifyEmailFromAnotherAccountAfterEmalIsVerified() throws Exception {
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.clickRegister();
         String username1 = KeycloakModelUtils.generateId();
-        registerPage.register("firstName", "lastName", username1 + "@mail.com", username1, "password", "password");
+        registerPage.registerWithoutPassword("firstName", "lastName", username1 + "@mail.com", username1);
         verifyEmailPage.assertCurrent();
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getReceivedMessages()[0];
         String verificationLink1 = getEmailLink(message);
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.clickRegister();
         String username2 = KeycloakModelUtils.generateId();
-        registerPage.register("firstName", "lastName", username2 + "@mail.com", username2, "password", "password");
+        registerPage.registerWithoutPassword("firstName", "lastName", username2 + "@mail.com", username2);
         verifyEmailPage.assertCurrent();
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
-        message = greenMail.getReceivedMessages()[1];
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
+        message = mail.getReceivedMessages()[1];
         String verificationLink2 = getEmailLink(message);
 
         driver.navigate().to(verificationLink1.trim());
+        updatePasswordPage.assertCurrent();
+        updatePasswordPage.changePassword("password", "password");
+
         driver.navigate().to(verificationLink2.trim());
         assertTrue(errorPage.getError().contains("You are already authenticated as different user"));
     }
 
     @Test
-    public void verifyEmailResend() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailResend() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        EventRepresentation sendEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL)
-          .detail("email", "test-user@localhost")
-          .assertEvent();
+        EventRepresentation sendEvent = EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL)
+          .details("email", "test-user@localhost")
+          .getEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
-        events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL)
-          .detail(Details.CODE_ID, mailCodeId)
-          .detail("email", "test-user@localhost")
-          .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL)
+          .details(Details.CODE_ID, mailCodeId)
+          .details("email", "test-user@localhost");
 
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
         String verificationUrl = getEmailLink(message);
 
         driver.navigate().to(verificationUrl.trim());
 
-        appPage.assertCurrent();
-        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
-        events.expectRequiredAction(EventType.VERIFY_EMAIL)
-          .user(testUserId)
-          .detail(Details.USERNAME, "test-user@localhost")
-          .detail(Details.EMAIL, "test-user@localhost")
-          .detail(Details.CODE_ID, mailCodeId)
-          .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.VERIFY_EMAIL)
+          .userId(testUserId)
+          .details(Details.USERNAME, "test-user@localhost")
+          .details(Details.EMAIL, "test-user@localhost")
+          .details(Details.CODE_ID, mailCodeId);
 
-        events.expectLogin().user(testUserId).session(mailCodeId).detail(Details.USERNAME, "test-user@localhost").assertEvent();
+        EventAssertion.expectLoginSuccess(events.poll()).userId(testUserId).sessionId(mailCodeId).details(Details.USERNAME, "test-user@localhost");
     }
 
     @Test
-    public void verifyEmailResendWithRefreshes() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailResendTooFast() {
+        oauth.openLoginForm();
+        loginPage.login("test-user@localhost", "password");
+
+        verifyEmailPage.assertCurrent();
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+
+        verifyEmailPage.clickResendEmail();
+        assertThat(verifyEmailPage.getFeedbackText(), Matchers.containsString("You must wait"));
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+
+        try {
+            timeOffSet.set(40);
+            verifyEmailPage.clickResendEmail();
+            Assertions.assertEquals(2, mail.getReceivedMessages().length);
+        } finally {
+            timeOffSet.set(0);
+        }
+
+    }
+
+    @Test
+    public void verifyEmailResendWithRefreshes() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
         driver.navigate().refresh();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        EventRepresentation sendEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL)
-          .detail("email", "test-user@localhost")
-          .assertEvent();
+        EventRepresentation sendEvent = EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL)
+          .details("email", "test-user@localhost").getEvent();
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
         driver.navigate().refresh();
 
-        events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL)
-          .detail(Details.CODE_ID, mailCodeId)
-          .detail("email", "test-user@localhost")
-          .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL)
+          .details(Details.CODE_ID, mailCodeId)
+          .details("email", "test-user@localhost");
 
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
         String verificationUrl = getEmailLink(message);
 
         driver.navigate().to(verificationUrl.trim());
 
-        appPage.assertCurrent();
-        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
-        events.expectRequiredAction(EventType.VERIFY_EMAIL)
-          .user(testUserId)
-          .detail(Details.USERNAME, "test-user@localhost")
-          .detail(Details.EMAIL, "test-user@localhost")
-          .detail(Details.CODE_ID, mailCodeId)
-          .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.VERIFY_EMAIL)
+          .userId(testUserId)
+          .details(Details.USERNAME, "test-user@localhost")
+          .details(Details.EMAIL, "test-user@localhost")
+          .details(Details.CODE_ID, mailCodeId);
 
-        events.expectLogin().user(testUserId).session(mailCodeId).detail(Details.USERNAME, "test-user@localhost").assertEvent();
+        EventAssertion.expectLoginSuccess(events.poll()).userId(testUserId).sessionId(mailCodeId).details(Details.USERNAME, "test-user@localhost");
     }
 
     @Test
-    public void verifyEmailResendFirstStillValidEvenWithSecond() throws IOException, MessagingException {
+    public void verifyEmailResendFirstStillValidEvenWithSecond() throws IOException {
         // Email verification can be performed any number of times
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
 
-        MimeMessage message1 = greenMail.getReceivedMessages()[0];
+        MimeMessage message1 = mail.getReceivedMessages()[0];
 
         String verificationUrl1 = getEmailLink(message1);
 
         driver.navigate().to(verificationUrl1.trim());
 
-        appPage.assertCurrent();
-        Assert.assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
-        MimeMessage message2 = greenMail.getReceivedMessages()[1];
+        MimeMessage message2 = mail.getReceivedMessages()[1];
 
         String verificationUrl2 = getEmailLink(message2);
 
         events.clear();
         driver.navigate().to(verificationUrl2.trim());
-        events.expectRequiredAction(EventType.VERIFY_EMAIL)
+        EventRepresentation eventRep = EventAssertion.assertError(events.poll()).type(EventType.VERIFY_EMAIL_ERROR)
                 .error(Errors.EMAIL_ALREADY_VERIFIED)
-                .detail(Details.REDIRECT_URI, Matchers.any(String.class))
-                .assertEvent();
+                .getEvent();
+        Assertions.assertNotEquals(oauth.getRedirectUri(), eventRep.getDetails().get(Details.REDIRECT_URI));
         infoPage.assertCurrent();
-        Assert.assertEquals("Your email address has been verified already.", infoPage.getInfo());
+        Assertions.assertEquals("Your email address has been verified already.", infoPage.getInfo());
     }
 
     @Test
-    public void verifyEmailResendFirstAndSecondStillValid() throws IOException, MessagingException {
+    public void verifyEmailResendFirstAndSecondStillValid() throws IOException {
         // Email verification can be performed any number of times
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
 
-        MimeMessage message1 = greenMail.getReceivedMessages()[0];
+        MimeMessage message1 = mail.getReceivedMessages()[0];
 
         String verificationUrl1 = getEmailLink(message1);
 
         driver.navigate().to(verificationUrl1.trim());
 
-        AccountHelper.logout(testRealm(), "test-user@localhost");
+        AccountHelper.logout(managedRealm.admin(), "test-user@localhost");
 
-        MimeMessage message2 = greenMail.getReceivedMessages()[1];
+        MimeMessage message2 = mail.getReceivedMessages()[1];
 
         String verificationUrl2 = getEmailLink(message2);
 
@@ -466,40 +558,41 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailResendAndVerifyWithLatestLink() throws IOException, MessagingException {
+    public void verifyEmailResendAndVerifyWithLatestLink() throws IOException {
         // Email verification can be performed any number of times
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
+        clearCooldownForUser();
         verifyEmailPage.clickResendEmail();
         verifyEmailPage.assertCurrent();
-        Assert.assertEquals(2, greenMail.getReceivedMessages().length);
-        MimeMessage message1 = greenMail.getReceivedMessages()[0];
+        Assertions.assertEquals(2, mail.getReceivedMessages().length);
+        MimeMessage message1 = mail.getReceivedMessages()[0];
         String verificationUrl1 = getEmailLink(message1);
 
-        MimeMessage message2 = greenMail.getReceivedMessages()[1];
+        MimeMessage message2 = mail.getReceivedMessages()[1];
         String verificationUrl2 = getEmailLink(message2);
         driver.navigate().to(verificationUrl2.trim());
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
         driver.navigate().to(verificationUrl1.trim());
         assertEquals("Your email address has been verified already.", infoPage.getInfo());
     }
 
     @Test
-    public void verifyEmailNewBrowserSession() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailNewBrowserSession() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
-        AssertEvents.ExpectedEvent emailEvent = events.expectRequiredAction(EventType.SEND_VERIFY_EMAIL).detail("email", "test-user@localhost");
-        EventRepresentation sendEvent = emailEvent.assertEvent();
+        EventAssertion emailEvent = EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_VERIFY_EMAIL).details("email", "test-user@localhost");
+        EventRepresentation sendEvent = emailEvent.getEvent();
 
         String mailCodeId = sendEvent.getDetails().get(Details.CODE_ID);
 
@@ -510,30 +603,30 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         proceedPage.clickProceedLink();
         infoPage.assertCurrent();
 
-        events.expectRequiredAction(EventType.VERIFY_EMAIL)
-          .user(testUserId)
-          .detail(Details.CODE_ID, Matchers.not(Matchers.is(mailCodeId)))
-          .client(oauth.getClientId())   // the "test-app" client specified in loginPage.open() is expected
-          .detail(Details.REDIRECT_URI, Matchers.any(String.class))
-          .assertEvent();
+        EventRepresentation eventRep = EventAssertion.expectRequiredAction(events.poll()).type(EventType.VERIFY_EMAIL)
+          .userId(testUserId)
+          .clientId(oauth.getClientId())   // the "test-app" client specified in loginPage.open() is expected
+          .getEvent();
+        Assertions.assertNotEquals(mailCodeId, eventRep.getDetails().get(Details.CODE_ID));
+        Assertions.assertNotEquals(oauth.getRedirectUri(), eventRep.getDetails().get(Details.REDIRECT_URI));
 
         infoPage.assertCurrent();
         assertEquals("Your email address has been verified.", infoPage.getInfo());
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.assertCurrent();
     }
 
     @Test
-    public void verifyEmailInvalidKeyInVerficationLink() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailInvalidKeyInVerficationLink() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
@@ -546,157 +639,149 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         errorPage.assertCurrent();
         assertEquals("An error occurred, please login again through your application.", errorPage.getError());
 
-        events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR)
+        EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR)
                 .error(Errors.INVALID_CODE)
-                .client((String)null)
-                .user((String)null)
-                .session((String)null)
-                .clearDetails()
-                .assertEvent();
+                .clientId(null)
+                .userId(null)
+                .sessionId(null);
     }
 
     @Test
-    public void verifyEmailExpiredCode() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailExpiredCode() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
         events.poll();
 
         try {
-            setTimeOffset(360);
+            timeOffSet.set(360);
 
             driver.navigate().to(verificationUrl.trim());
 
             loginPage.assertCurrent();
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR)
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR)
                     .error(Errors.EXPIRED_CODE)
-                    .client((String)null)
-                    .user(testUserId)
-                    .session((String)null)
-                    .clearDetails()
-                    .detail(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE)
-                    .assertEvent();
+                    .clientId(null)
+                    .userId(testUserId)
+                    .sessionId(null)
+                    .details(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
         }
     }
 
     @Test
-    public void verifyEmailExpiredCodedPerActionLifespan() throws IOException, MessagingException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void verifyEmailExpiredCodedPerActionLifespan() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
-        realmRep.setAttributes(UserActionTokenBuilder.create().verifyEmailLifespan(60).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().verifyEmailLifespan(60).build());
+        managedRealm.admin().update(realmRep);
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
         events.poll();
 
         try {
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(verificationUrl.trim());
 
             loginPage.assertCurrent();
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR)
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR)
                     .error(Errors.EXPIRED_CODE)
-                    .client((String)null)
-                    .user(testUserId)
-                    .session((String)null)
-                    .clearDetails()
-                    .detail(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE)
-                    .assertEvent();
+                    .clientId(null)
+                    .userId(testUserId)
+                    .sessionId(null)
+                    .details(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void verifyEmailExpiredCodedPerActionMultipleTimeouts() throws IOException, MessagingException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void verifyEmailExpiredCodedPerActionMultipleTimeouts() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
-        realmRep.setAttributes(UserActionTokenBuilder.create().verifyEmailLifespan(60).resetCredentialsLifespan(300).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().verifyEmailLifespan(60).resetCredentialsLifespan(300).build());
+        managedRealm.admin().update(realmRep);
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
         events.poll();
 
         try {
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(verificationUrl.trim());
 
             loginPage.assertCurrent();
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR)
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR)
                     .error(Errors.EXPIRED_CODE)
-                    .client((String)null)
-                    .user(testUserId)
-                    .session((String)null)
-                    .clearDetails()
-                    .detail(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE)
-                    .assertEvent();
+                    .clientId(null)
+                    .userId(testUserId)
+                    .sessionId(null)
+                    .details(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void verifyEmailExpiredCodeAndExpiredSession() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailExpiredCodeAndExpiredSession() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
         events.poll();
 
         try {
-            setTimeOffset(3600);
+            timeOffSet.set(3600);
 
             driver.manage().deleteAllCookies();
 
@@ -705,34 +790,32 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
             errorPage.assertCurrent();
             assertEquals("Action expired.", errorPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR)
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR)
                     .error(Errors.EXPIRED_CODE)
-                    .client((String)null)
-                    .user(testUserId)
-                    .session((String)null)
-                    .clearDetails()
-                    .detail(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE)
-                    .assertEvent();
+                    .clientId(null)
+                    .userId(testUserId)
+                    .sessionId(null)
+                    .details(Details.ACTION, VerifyEmailActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
         }
     }
 
 
-    public static String getEmailLink(MimeMessage message) throws IOException, MessagingException {
+    public static String getEmailLink(MimeMessage message) throws IOException {
         return MailUtils.getPasswordResetEmailLink(message);
     }
 
     // https://issues.jboss.org/browse/KEYCLOAK-5861
     @Test
-    public void verifyEmailNewBrowserSessionWithClientRedirect() throws URISyntaxException, IOException, MessagingException {
-        try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
+    public void verifyEmailNewBrowserSessionWithClientRedirect() throws IOException {
+        try (Closeable u = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
           .setEmailVerified(false)
           .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            managedRealm.admin().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
-            Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-            MimeMessage message = greenMail.getLastReceivedMessage();
+            Assertions.assertEquals(1, mail.getReceivedMessages().length);
+            MimeMessage message = mail.getLastReceivedMessage();
 
             String verificationUrl = getEmailLink(message);
 
@@ -746,22 +829,22 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
             assertEquals("Your account has been updated.", infoPage.getInfo());
 
             // Now login to app
-            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage);
             testAppHelper.login("test-user@localhost", "password");
-            appPage.assertCurrent();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
         }
     }
 
     @Test
-    public void verifyEmailNewBrowserSessionPreserveClient() throws IOException, MessagingException {
-        loginPage.open();
+    public void verifyEmailNewBrowserSessionPreserveClient() throws IOException {
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
@@ -786,39 +869,39 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailDuringAuthFlow() throws IOException, MessagingException {
-        try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
+    public void verifyEmailDuringAuthFlow() throws IOException {
+        try (Closeable u = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
                 .setEmailVerified(false)
                 .setRequiredActions(RequiredAction.VERIFY_EMAIL)
                 .update()) {
 
-            loginPage.open();
+            oauth.openLoginForm();
             loginPage.assertCurrent();
             loginPage.login("test-user@localhost", "password");
 
             verifyEmailPage.assertCurrent();
 
-            Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-            MimeMessage message = greenMail.getLastReceivedMessage();
+            Assertions.assertEquals(1, mail.getReceivedMessages().length);
+            MimeMessage message = mail.getLastReceivedMessage();
 
             String verificationUrl = getEmailLink(message);
 
             driver.navigate().to(verificationUrl.trim());
 
-            appPage.assertCurrent();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
         }
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowFirstClickLink() throws IOException, MessagingException {
-        try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
+    public void verifyEmailDuringAuthFlowFirstClickLink() throws IOException {
+        try (Closeable u = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
                 .setEmailVerified(false)
                 .setRequiredActions(RequiredAction.VERIFY_EMAIL)
                 .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            managedRealm.admin().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
-            Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-            MimeMessage message = greenMail.getLastReceivedMessage();
+            Assertions.assertEquals(1, mail.getReceivedMessages().length);
+            MimeMessage message = mail.getLastReceivedMessage();
 
             String verificationUrl = getEmailLink(message);
 
@@ -826,7 +909,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
             driver.navigate().to(verificationUrl);
 
-            loginPage.open();
+            oauth.openLoginForm();
             loginPage.assertCurrent();
             loginPage.login("test-user@localhost", "password");
 
@@ -835,15 +918,15 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    public void verifyEmailClickLinkRequiredActionsCleared() throws IOException, MessagingException {
-        try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
+    public void verifyEmailClickLinkRequiredActionsCleared() throws IOException {
+        try (Closeable u = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
                 .setEmailVerified(true)
                 .setRequiredActions()
                 .update()) {
-            testRealm().users().get(testUserId).executeActionsEmail(Arrays.asList(RequiredAction.VERIFY_EMAIL.name()));
+            managedRealm.admin().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.VERIFY_EMAIL.name()));
 
-            Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-            MimeMessage message = greenMail.getLastReceivedMessage();
+            Assertions.assertEquals(1, mail.getReceivedMessages().length);
+            MimeMessage message = mail.getLastReceivedMessage();
 
             String verificationUrl = getEmailLink(message);
 
@@ -851,42 +934,42 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
             driver.navigate().to(verificationUrl);
 
-            loginPage.open();
+            oauth.openLoginForm();
             loginPage.assertCurrent();
             loginPage.login("test-user@localhost", "password");
 
-            appPage.assertCurrent();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
         }
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowAfterLogout() throws URISyntaxException, IOException, MessagingException {
-        try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
+    public void verifyEmailDuringAuthFlowAfterLogout() throws IOException {
+        try (Closeable u = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
                 .setEmailVerified(true)
                 .update()) {
 
-            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage);
             testAppHelper.login("test-user@localhost", "password");
-            appPage.assertCurrent();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
             testAppHelper.logout();
-            appPage.assertCurrent();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
             verifyEmailDuringAuthFlow();
         }
     }
 
     @Test
-    public void verifyEmailDuringAuthFlowAfterRefresh() throws URISyntaxException, IOException, MessagingException {
-        try (Closeable u = new UserAttributeUpdater(testRealm().users().get(testUserId))
+    public void verifyEmailDuringAuthFlowAfterRefresh() throws IOException {
+        try (Closeable u = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
                 .setEmailVerified(true)
                 .update()) {
-            final String testRealmName = testRealm().toRepresentation().getRealm();
+            final String testRealmName = managedRealm.admin().toRepresentation().getRealm();
 
             // Browser 1: Log in
-            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+            TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage);
             testAppHelper.login("test-user@localhost", "password");
-            appPage.assertCurrent();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
             // Browser 2: Log in
             driver2.navigate().to(oauth.loginForm().build());
@@ -896,21 +979,20 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
             driver2.findElement(By.id("password")).sendKeys("password");
             driver2.findElement(By.id("password")).submit();
 
-            assertThat(driver2.getCurrentUrl(), Matchers.startsWith(oauth.APP_AUTH_ROOT));
+            assertThat(driver2.getCurrentUrl(), Matchers.startsWith(OAuthClient.APP_AUTH_ROOT));
 
             // Admin: set required action to VERIFY_EMAIL
-            try (Closeable u1 = new UserAttributeUpdater(testRealm().users().get(testUserId))
+            try (Closeable u1 = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId))
                     .setEmailVerified(false)
                     .setRequiredActions(RequiredAction.VERIFY_EMAIL)
                     .update()) {
                 // Browser 2: Refresh window
                 driver2.navigate().refresh();
-                assertThat(driver2.getCurrentUrl(), Matchers.startsWith(oauth.APP_AUTH_ROOT));
+                assertThat(driver2.getCurrentUrl(), Matchers.startsWith(OAuthClient.APP_AUTH_ROOT));
 
                 // Browser 1: Logout
                 testAppHelper.logout();
-                appPage.assertCurrent();
-
+                Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
                 // Browser 1: Log in
                 testAppHelper.login("test-user@localhost", "password");
@@ -918,8 +1000,8 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                 verifyEmailPage.assertCurrent();
 
                 // Browser 2 [still logged in]: Click the email verification link
-                Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-                MimeMessage message = greenMail.getLastReceivedMessage();
+                Assertions.assertEquals(1, mail.getReceivedMessages().length);
+                MimeMessage message = mail.getLastReceivedMessage();
 
                 String verificationUrl = getEmailLink(message);
 
@@ -934,30 +1016,31 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
                 assertThat(driver2.getPageSource(), Matchers.containsString("kc-info-message"));
                 assertThat(driver2.getPageSource(), Matchers.containsString("Your email address has been verified."));
 
-                // Browser 1: Expect land back to app after refresh
+                // Browser 1: Expect that it needs to authenticate from scratch after browser refresh
                 driver.navigate().refresh();
-                appPage.assertCurrent();
+                testAppHelper.login("test-user@localhost", "password");
+                Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
             }
         }
     }
 
     @Test
-    public void verifyEmailWhileLoggedIn() throws IOException, MessagingException {
-        UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
+    public void verifyEmailWhileLoggedIn() throws IOException {
+        UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(true).update();
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
         userAttributeUpdater.setEmailVerified(false).setRequiredActions(RequiredAction.VERIFY_EMAIL).update();
 
         // this will result in email verification
-        loginPage.open();
+        oauth.openLoginForm();
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
@@ -965,29 +1048,31 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         driver.navigate().to(verificationUrl);
 
         // back to app, already logged in
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
         // email should be verified and required actions empty
-        UserRepresentation user = testRealm().users().get(testUserId).toRepresentation();
+        UserRepresentation user = managedRealm.admin().users().get(testUserId).toRepresentation();
         assertTrue(user.isEmailVerified());
         assertThat(user.getRequiredActions(), Matchers.empty());
     }
 
     @Test
-    public void verifyEmailViaAuthSessionWhileLoggedIn() throws IOException, MessagingException {
+    public void verifyEmailViaAuthSessionWhileLoggedIn() throws IOException {
         Assume.assumeTrue("Works only on auth-server-undertow",
                 AuthServerTestEnricher.AUTH_SERVER_CONTAINER.equals(AuthServerTestEnricher.AUTH_SERVER_CONTAINER_DEFAULT));
 
-        UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
+        UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(false).update();
 
-        loginPage.open();
+        oauth.openLoginForm();
 
         String authSessionId = AuthenticationSessionFailoverClusterTest.getAuthSessionCookieValue(driver);
-        String realmId = testRealm().toRepresentation().getId();
+        String realmId = managedRealm.admin().toRepresentation().getId();
         testingClient.server().run(session -> {
             RealmModel realm = session.realms().getRealm(realmId);
-            RootAuthenticationSessionModel ras = session.authenticationSessions().getRootAuthenticationSession(realm, authSessionId);
+            session.getContext().setRealm(realm);
+            RootAuthenticationSessionModel ras = session.authenticationSessions()
+                    .getRootAuthenticationSession(realm, new AuthenticationSessionManager(session).decodeBase64AndValidateSignature(authSessionId));
             assertThat("Expecting single auth session", ras.getAuthenticationSessions().keySet(), Matchers.hasSize(1));
             ras.getAuthenticationSessions().forEach((id, as) -> as.addRequiredAction(RequiredAction.VERIFY_EMAIL));
         });
@@ -995,8 +1080,8 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
@@ -1004,31 +1089,31 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         driver.navigate().to(verificationUrl);
 
         // back to app, already logged in
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
         // email should be verified and required actions empty
-        UserRepresentation user = testRealm().users().get(testUserId).toRepresentation();
+        UserRepresentation user = managedRealm.admin().users().get(testUserId).toRepresentation();
         assertTrue(user.isEmailVerified());
         assertThat(user.getRequiredActions(), Matchers.empty());
     }
 
     @Test
-    public void verifyEmailInNewBrowserWhileLoggedInFirstBrowser() throws IOException, MessagingException {
-        UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(testRealm().users().get(testUserId));
+    public void verifyEmailInNewBrowserWhileLoggedInFirstBrowser() throws IOException {
+        UserAttributeUpdater userAttributeUpdater = new UserAttributeUpdater(managedRealm.admin().users().get(testUserId));
         userAttributeUpdater.setEmailVerified(true).update();
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
         userAttributeUpdater.setEmailVerified(false).setRequiredActions(RequiredAction.VERIFY_EMAIL).update();
 
         // this will result in email verification
-        loginPage.open();
+        oauth.openLoginForm();
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
@@ -1051,58 +1136,58 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         assertThat(driver2.getPageSource(), Matchers.containsString("Sign in"));
 
         // email should be verified and required actions empty
-        UserRepresentation user = testRealm().users().get(testUserId).toRepresentation();
+        UserRepresentation user = managedRealm.admin().users().get(testUserId).toRepresentation();
         assertTrue(user.isEmailVerified());
         assertThat(user.getRequiredActions(), Matchers.empty());
 
         // after refresh in the first browser the app should be shown
         driver.navigate().refresh();
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
     }
 
     @Test
-    public void verifyEmailExpiredRegistration() throws IOException, MessagingException {
+    public void verifyEmailExpiredRegistration() throws IOException {
         final String COMMON_ATTR = "verifyEmailRegistrationUser";
 
         driver.navigate().to(oauth.registrationForm().build());
 
         registerPage.assertCurrent();
-        registerPage.register(COMMON_ATTR, COMMON_ATTR, COMMON_ATTR + "@" + COMMON_ATTR, COMMON_ATTR, COMMON_ATTR, COMMON_ATTR);
+        registerPage.registerWithoutPassword(COMMON_ATTR, COMMON_ATTR, COMMON_ATTR + "@" + COMMON_ATTR, COMMON_ATTR);
 
         verifyEmailPage.assertCurrent();
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        MimeMessage message = mail.getLastReceivedMessage();
 
         String verificationUrl = getEmailLink(message);
 
         try {
-            setTimeOffset(360);
+            timeOffSet.set(360);
 
             driver.navigate().to(verificationUrl.trim());
 
             loginPage.assertCurrent();
             assertEquals("Action expired. Please start again.", loginPage.getError());
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
         }
     }
 
     // KEYCLOAK-15170
     @Test
     public void changeEmailAddressAfterSendingEmail() throws Exception {
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         verifyEmailPage.assertCurrent();
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
         String verificationUrl = getEmailLink(message);
 
-        UserResource user = testRealm().users().get(testUserId);
+        UserResource user = managedRealm.admin().users().get(testUserId);
         UserRepresentation userRep = user.toRepresentation();
         userRep.setEmail("vmuzikar@redhat.com");
         user.update(userRep);
@@ -1113,13 +1198,12 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
     }
 
     @Test
-    @EnableFeature(value = Profile.Feature.UPDATE_EMAIL, skipRestart = true)
     public void actionTokenWithInvalidRequiredActions() throws IOException {
         // Send email with required action
-        testRealm().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.UPDATE_EMAIL.name()));
+        managedRealm.admin().users().get(testUserId).executeActionsEmail(List.of(RequiredAction.UPDATE_EMAIL.name()));
 
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getLastReceivedMessage();
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getLastReceivedMessage();
 
         MailUtils.EmailBody body = MailUtils.getBody(message);
         assertThat(body, notNullValue());
@@ -1140,34 +1224,32 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
 
     @Test
     public void testVerifyEmailWithNoEmailAndVerifyProfile() throws Exception {
-        UserResource user = testRealm().users().get(testUserId);
+        UserResource user = managedRealm.admin().users().get(testUserId);
         UserRepresentation userRep = user.toRepresentation();
         userRep.setEmail("");
         user.update(userRep);
 
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login("test-user@localhost", "password");
 
         // verify profile should be presented first as the verify email is ignored without email
         verifyProfilePage.assertCurrent();
-        events.expectRequiredAction(EventType.VERIFY_PROFILE)
-                .user(testUserId)
-                .detail(Details.FIELDS_TO_UPDATE, UserModel.EMAIL)
-                .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.VERIFY_PROFILE)
+                .userId(testUserId)
+                .details(Details.FIELDS_TO_UPDATE, UserModel.EMAIL);
 
         verifyProfilePage.updateEmail("test-user@localhost", "test-user", "test-user");
 
         verifyEmailPage.assertCurrent();
 
-        events.expectRequiredAction(EventType.UPDATE_PROFILE)
-                .user(testUserId)
-                .detail(Details.UPDATED_EMAIL, "test-user@localhost")
-                .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_PROFILE)
+                .userId(testUserId)
+                .details(Details.UPDATED_EMAIL, "test-user@localhost");
 
         // verify email is presented now
-        Assert.assertEquals(1, greenMail.getReceivedMessages().length);
+        Assertions.assertEquals(1, mail.getReceivedMessages().length);
 
-        final MimeMessage message = greenMail.getLastReceivedMessage();
+        final MimeMessage message = mail.getLastReceivedMessage();
 
         final String verificationUrl = getEmailLink(message);
 
@@ -1175,7 +1257,7 @@ public class RequiredActionEmailVerificationTest extends AbstractTestRealmKeyclo
         driver.navigate().to(verificationUrl);
 
         // back to app, already logged in
-        appPage.assertCurrent();
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
         // email should be verified and required actions empty
         userRep = user.toRepresentation();
