@@ -16,22 +16,33 @@
  */
 package org.keycloak.testsuite.forms;
 
-import org.hamcrest.MatcherAssert;
-import org.hamcrest.Matchers;
-import org.jboss.arquillian.drone.api.annotation.Drone;
+import java.io.Closeable;
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.MimeMessage;
+
+import org.keycloak.TokenVerifier;
 import org.keycloak.admin.client.resource.ClientResource;
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.authentication.actiontoken.resetcred.ResetCredentialsActionToken;
+import org.keycloak.authentication.authenticators.client.ClientIdAndSecretAuthenticator;
 import org.keycloak.authentication.authenticators.resetcred.ResetCredentialEmail;
-import org.jboss.arquillian.graphene.page.Page;
 import org.keycloak.common.constants.ServiceAccountConstants;
-import org.keycloak.common.util.MultivaluedHashMap;
 import org.keycloak.common.util.KeycloakUriBuilder;
+import org.keycloak.common.util.MultivaluedHashMap;
+import org.keycloak.common.util.UriUtils;
 import org.keycloak.events.Details;
 import org.keycloak.events.Errors;
 import org.keycloak.events.EventType;
 import org.keycloak.models.AuthenticationExecutionModel;
 import org.keycloak.models.Constants;
+import org.keycloak.models.DefaultActionTokenKey;
+import org.keycloak.models.SingleUseObjectProvider;
 import org.keycloak.models.credential.PasswordCredentialModel;
 import org.keycloak.models.utils.DefaultAuthenticationFlows;
 import org.keycloak.models.utils.SystemClientUtil;
@@ -46,58 +57,61 @@ import org.keycloak.services.resources.LoginActionsService;
 import org.keycloak.storage.StorageId;
 import org.keycloak.storage.UserStorageProvider;
 import org.keycloak.storage.UserStorageProviderModel;
-import org.keycloak.testsuite.AssertEvents;
+import org.keycloak.testframework.events.EventAssertion;
+import org.keycloak.testframework.realm.ClientBuilder;
+import org.keycloak.testframework.realm.RealmAttributesBuilder;
+import org.keycloak.testframework.realm.RealmBuilder;
+import org.keycloak.testframework.realm.UserBuilder;
 import org.keycloak.testsuite.AbstractTestRealmKeycloakTest;
+import org.keycloak.testsuite.AssertEvents;
+import org.keycloak.testsuite.admin.AdminApiUtil;
 import org.keycloak.testsuite.admin.ApiUtil;
 import org.keycloak.testsuite.arquillian.annotation.IgnoreBrowserDriver;
 import org.keycloak.testsuite.federation.UserMapStorageFactory;
 import org.keycloak.testsuite.federation.kerberos.AbstractKerberosTest;
-import org.keycloak.testsuite.pages.AppPage;
-import org.keycloak.testsuite.pages.AppPage.RequestType;
 import org.keycloak.testsuite.pages.ErrorPage;
 import org.keycloak.testsuite.pages.InfoPage;
 import org.keycloak.testsuite.pages.LoginPage;
 import org.keycloak.testsuite.pages.LoginPasswordResetPage;
 import org.keycloak.testsuite.pages.LoginPasswordUpdatePage;
 import org.keycloak.testsuite.pages.LogoutConfirmPage;
-import org.keycloak.testsuite.pages.VerifyEmailPage;
+import org.keycloak.testsuite.pages.PageUtils;
 import org.keycloak.testsuite.updaters.ClientAttributeUpdater;
+import org.keycloak.testsuite.util.AccountHelper;
 import org.keycloak.testsuite.util.BrowserTabUtil;
-import org.keycloak.testsuite.util.GreenMailRule;
 import org.keycloak.testsuite.util.InfinispanTestTimeServiceRule;
 import org.keycloak.testsuite.util.KerberosUtils;
+import org.keycloak.testsuite.util.MailServer;
 import org.keycloak.testsuite.util.MailUtils;
-import org.keycloak.testsuite.util.oauth.AccessTokenResponse;
-import org.keycloak.testsuite.util.RealmBuilder;
 import org.keycloak.testsuite.util.SecondBrowser;
+import org.keycloak.testsuite.util.TestAppHelper;
 import org.keycloak.testsuite.util.UIUtils;
 import org.keycloak.testsuite.util.URLUtils;
-import org.keycloak.testsuite.util.UserActionTokenBuilder;
-import org.keycloak.testsuite.util.UserBuilder;
 import org.keycloak.testsuite.util.WaitUtils;
-import org.keycloak.testsuite.util.AccountHelper;
-import org.keycloak.testsuite.util.TestAppHelper;
+import org.keycloak.testsuite.util.oauth.AccessTokenResponse;
+import org.keycloak.util.TokenUtil;
 
-import jakarta.mail.MessagingException;
-import jakarta.mail.internet.MimeMessage;
-
-import java.io.Closeable;
-import java.io.IOException;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.concurrent.atomic.AtomicInteger;
-
-import org.junit.*;
+import org.hamcrest.MatcherAssert;
+import org.hamcrest.Matchers;
+import org.jboss.arquillian.drone.api.annotation.Drone;
+import org.jboss.arquillian.graphene.page.Page;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.firefox.FirefoxDriver;
 import org.openqa.selenium.htmlunit.HtmlUnitDriver;
 
+import static org.keycloak.protocol.oidc.par.endpoints.ParEndpoint.REQUEST_URI_PREFIX;
+
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.endsWith;
-import static org.junit.Assert.*;
+import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 /**
  * @author <a href="mailto:sthorger@redhat.com">Stian Thorgersen</a>
@@ -118,8 +132,8 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
     @Override
     public void configureTestRealm(RealmRepresentation testRealm) {
-        RealmBuilder.edit(testRealm)
-                .client(org.keycloak.testsuite.util.ClientBuilder.create().clientId("client-user").serviceAccount());
+        RealmBuilder.update(testRealm)
+                .clients(ClientBuilder.create().clientId("client-user").serviceAccountsEnabled());
     }
 
     @Before
@@ -132,17 +146,14 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
                 .build();
 
         password = generatePassword();
-        userId = ApiUtil.createUserAndResetPasswordWithAdminClient(testRealm(), defaultUser, password);
+        userId = AdminApiUtil.createUserAndResetPasswordWithAdminClient(managedRealm.admin(), defaultUser, password);
         defaultUser.setId(userId);
         expectedMessagesCount = 0;
         getCleanup().addUserId(userId);
     }
 
     @Rule
-    public GreenMailRule greenMail = new GreenMailRule();
-
-    @Page
-    protected AppPage appPage;
+    public MailServer mail = new MailServer();
 
     @Page
     protected LoginPage loginPage;
@@ -152,9 +163,6 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
     @Page
     protected InfoPage infoPage;
-
-    @Page
-    protected VerifyEmailPage verifyEmailPage;
 
     @Page
     protected LoginPasswordResetPage resetPasswordPage;
@@ -171,44 +179,40 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     private int expectedMessagesCount;
 
     @Test
-    public void resetPasswordLink() throws IOException, MessagingException {
+    public void resetPasswordLink() throws IOException {
         String username = "login-test";
         String resetUri = oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials";
 
         openResetPasswordUrlAndDoFlow(resetUri, "account", oauth.AUTH_SERVER_ROOT + "/realms/test/account/", false);
 
-        AccountHelper.logout(testRealm(), username);
+        AccountHelper.logout(managedRealm.admin(), username);
         WaitUtils.waitForPageToLoad();
 
-        TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+        TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage);
         testAppHelper.login(username, "resetPassword");
 
-        appPage.assertCurrent();
-
-        assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
     }
 
     @Test
     public void resetPasswordLoggedUser() throws IOException {
         String username = "login-test";
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.login(username, password);
 
-        events.expectLogin().user(userId).detail(Details.USERNAME, username).assertEvent();
+        EventAssertion.expectLoginSuccess(events.poll()).userId(userId).details(Details.USERNAME, username);
 
         String resetUri = oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials";
 
         openResetPasswordUrlAndDoFlow(resetUri, "account", oauth.AUTH_SERVER_ROOT + "/realms/test/account/", true);
 
-        AccountHelper.logout(testRealm(), username);
+        AccountHelper.logout(managedRealm.admin(), username);
         WaitUtils.waitForPageToLoad();
 
-        TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage, appPage);
+        TestAppHelper testAppHelper = new TestAppHelper(oauth, loginPage);
         testAppHelper.login(username, "resetPassword");
 
-        appPage.assertCurrent();
-
-        assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
     }
 
     // Starts by opening "reset-password-url". Then go through the successful reset-password flow for the particular user. After user confirms new password, this method ends.
@@ -224,22 +228,21 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         loginPage.assertCurrent();
         assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
 
-        AssertEvents.ExpectedEvent event = events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                .user(userId)
-                .client(expectedClientId)
-                .detail(Details.USERNAME, username)
-                .detail(Details.EMAIL, "login@test.com")
-                .session((String)null);
+        EventAssertion event = EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                .userId(userId)
+                .clientId(expectedClientId)
+                .details(Details.USERNAME, username)
+                .details(Details.EMAIL, "login@test.com")
+                .sessionId(null);
         if (expectedRedirectUri != null) {
-            event.detail(Details.REDIRECT_URI,  expectedRedirectUri);
+            event.details(Details.REDIRECT_URI,  expectedRedirectUri);
         } else {
-            event.removeDetail(Details.REDIRECT_URI);
+            event.withoutDetails(Details.REDIRECT_URI);
         }
-        event.assertEvent();
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
@@ -248,34 +251,32 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         updatePasswordPage.assertCurrent();
 
         if(userAuthenticated) {
-            assertFalse("Logout other sessions was ticked", updatePasswordPage.isLogoutSessionsChecked());
+            assertFalse(updatePasswordPage.isLogoutSessionsChecked(), "Logout other sessions was ticked");
         } else {
             updatePasswordPage.checkLogoutSessions();
         }
 
         updatePasswordPage.changePassword("resetPassword", "resetPassword");
 
-        event = events.expectRequiredAction(EventType.UPDATE_PASSWORD)
-                .detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
-                .client(expectedClientId)
-                .user(userId).detail(Details.USERNAME, username);
+        event = EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_PASSWORD)
+                .details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
+                .clientId(expectedClientId)
+                .userId(userId).details(Details.USERNAME, username);
         if (expectedRedirectUri != null) {
-            event.detail(Details.REDIRECT_URI,  expectedRedirectUri);
+            event.details(Details.REDIRECT_URI,  expectedRedirectUri);
         } else {
-            event.removeDetail(Details.REDIRECT_URI);
+            event.withoutDetails(Details.REDIRECT_URI);
         }
-        event.assertEvent();
 
-        event = events.expectRequiredAction(EventType.UPDATE_CREDENTIAL)
-                .detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
-                .client(expectedClientId)
-                .user(userId).detail(Details.USERNAME, username);
+        event = EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_CREDENTIAL)
+                .details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
+                .clientId(expectedClientId)
+                .userId(userId).details(Details.USERNAME, username);
         if (expectedRedirectUri != null) {
-            event.detail(Details.REDIRECT_URI,  expectedRedirectUri);
+            event.details(Details.REDIRECT_URI,  expectedRedirectUri);
         } else {
-            event.removeDetail(Details.REDIRECT_URI);
+            event.withoutDetails(Details.REDIRECT_URI);
         }
-        event.assertEvent();
     }
 
     @Test
@@ -299,35 +300,35 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         openResetPasswordUrlAndDoFlow(resetUri, "test-app", oauth.getRedirectUri(), false);
 
-        // Should be directly redirected to "application because of "redirect_uri" parameter
-        appPage.assertCurrent();
+        // Should be directly redirected to application because of "redirect_uri" parameter
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
     }
 
     @Test
-    public void resetPasswordLinkErrorFlows() throws IOException {
+    public void resetPasswordLinkErrorFlows() {
         // Client not found
         driver.navigate().to(oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials?client_id=not_found");
         errorPage.assertCurrent();
-        Assert.assertEquals("Client not found.", errorPage.getError());
+        Assertions.assertEquals("Client not found.", errorPage.getError());
 
         // Redirect_uri without client
         driver.navigate().to(oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials?redirect_uri=https://foo/bar/");
         errorPage.assertCurrent();
-        Assert.assertEquals("Missing parameters: client_id", errorPage.getError());
+        Assertions.assertEquals("Missing parameters: client_id", errorPage.getError());
 
         // Incorrect redirect_uri
         driver.navigate().to(oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials?client_id=test-app&redirect_uri=https://foo/bar/");
         errorPage.assertCurrent();
-        Assert.assertEquals("Invalid parameter: redirect_uri", errorPage.getError());
+        Assertions.assertEquals("Invalid parameter: redirect_uri", errorPage.getError());
 
         // Client disabled
-        ClientResource client = ApiUtil.findClientByClientId(testRealm(), "test-app");
+        ClientResource client = AdminApiUtil.findClientByClientId(managedRealm.admin(), "test-app");
         ClientRepresentation clientRep = client.toRepresentation();
         clientRep.setEnabled(false);
         client.update(clientRep);
         try {
             driver.navigate().to(oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials?client_id=test-app");
-            Assert.assertEquals("Client disabled.", errorPage.getError());
+            Assertions.assertEquals("Client disabled.", errorPage.getError());
         } finally {
             clientRep.setEnabled(true);
             client.update(clientRep);
@@ -341,7 +342,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordTwice() throws IOException, MessagingException {
+    public void resetPasswordTwice() throws IOException {
         String changePasswordUrl = resetPassword("login-test");
         events.clear();
 
@@ -349,7 +350,36 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordForceLogin() throws IOException, MessagingException {
+    public void resetPasswordTwiceWithPARRequestInBetween() throws Exception {
+        String changePasswordUrl = resetPassword("login-test");
+        events.clear();
+
+        // Try to create manually the cache key from actionToken
+        String queryString = changePasswordUrl.substring(changePasswordUrl.indexOf("?") + 1);
+        MultivaluedHashMap<String, String> params = UriUtils.decodeQueryString(queryString);
+        String key = params.getFirst(Constants.KEY);
+        TokenVerifier<DefaultActionTokenKey> tokenVerifier = TokenVerifier.create(key, DefaultActionTokenKey.class);
+        DefaultActionTokenKey aToken = tokenVerifier.getToken();
+        String serializedKey1 = aToken.serializeKey();
+        String serializedKey2 = serializedKey1 + SingleUseObjectProvider.REVOKED_KEY;
+
+        // Try to send PAR request with manually created requestUri related to the manually created serialized keys
+        String state = "testSuccessfulSinglePar";
+        oauth.loginForm()
+                .requestUri(REQUEST_URI_PREFIX + serializedKey1)
+                .state(state)
+                .open();
+        oauth.loginForm()
+                .requestUri(REQUEST_URI_PREFIX + serializedKey2)
+                .state(state)
+                .open();
+        events.clear();
+
+        assertSecondPasswordResetFails(changePasswordUrl, oauth.getClientId()); // KC_RESTART doesn't exist, it was deleted after first successful reset-password flow was finished
+    }
+
+    @Test
+    public void resetPasswordForceLogin() throws IOException {
         // add the force login option in the reset-credential-email authenticator
         configureForceLogin(Boolean.TRUE.toString());
 
@@ -357,7 +387,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordForceLoginFederatedUser() throws IOException, MessagingException {
+    public void resetPasswordForceLoginFederatedUser() throws IOException {
         // create the example map storage user federation
         ComponentRepresentation memProvider = new ComponentRepresentation();
         memProvider.setName(UserStorageProvider.class.getName());
@@ -366,17 +396,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         memProvider.setConfig(new MultivaluedHashMap<>());
         memProvider.getConfig().putSingle("priority", Integer.toString(0));
         memProvider.getConfig().putSingle(UserStorageProviderModel.IMPORT_ENABLED, Boolean.toString(false));
-        String componentId = ApiUtil.getCreatedId(testRealm().components().add(memProvider));
+        String componentId = ApiUtil.getCreatedId(managedRealm.admin().components().add(memProvider));
         getCleanup().addComponentId(componentId);
 
         // remove the test user and create it but federated
-        testRealm().users().get(userId).remove();
+        managedRealm.admin().users().get(userId).remove();
         UserRepresentation user = new UserRepresentation();
         user.setUsername("login-test");
         user.setEmail("login@test.com");
         user.setFederationLink(componentId);
-        this.userId = ApiUtil.getCreatedId(testRealm().users().create(user));
-        Assert.assertFalse(StorageId.isLocalStorage(userId));
+        this.userId = ApiUtil.getCreatedId(managedRealm.admin().users().create(user));
+        Assertions.assertFalse(StorageId.isLocalStorage(userId));
 
         // by default federated users are force to re-login
         resetPassword("login-test", "resetPassword", true);
@@ -387,7 +417,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordTwiceInNewBrowser() throws IOException, MessagingException {
+    public void resetPasswordTwiceInNewBrowser() throws IOException {
         String changePasswordUrl = resetPassword("login-test");
         events.clear();
 
@@ -398,36 +428,67 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         assertSecondPasswordResetFails(changePasswordUrl, oauth.getClientId());
     }
 
+    @Test
+    public void resetPasswordTwiceInSecondBrowser() throws IOException {
+        String username = "login-test";
+
+        initiateResetPasswordFromResetPasswordPage(username);
+
+        // Navigate the first browser to the set password page
+        assertEquals(expectedMessagesCount, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getReceivedMessages()[mail.getReceivedMessages().length - 1];
+        String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
+        driver.navigate().to(changePasswordUrl.trim());
+        updatePasswordPage.assertCurrent();
+        assertEquals("You need to change your password.", updatePasswordPage.getFeedbackMessage());
+
+        // Update the password update in a second browser.
+        driver2.navigate().to(changePasswordUrl.trim());
+        changePasswordOnUpdatePage(driver2);
+        assertThat(driver2.getCurrentUrl(), Matchers.containsString("client_id=test-app"));
+        assertThat(driver2.getPageSource(), Matchers.containsString("Your account has been updated."));
+        assertThat(driver2.getPageSource(), Matchers.containsString("Back to Application"));
+
+        // Updating the password in the first browser should now fail.
+        updatePasswordPage.changePassword("invalid-new-password", "invalid-new-password");
+        errorPage.assertCurrent();
+        assertEquals("Action expired. Please continue with login now.", errorPage.getError());
+
+        // check the password works
+        oauth.openLoginForm();
+        loginPage.login(username, "resetPassword");
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
+    }
+
     public void assertSecondPasswordResetFails(String changePasswordUrl, String clientId) {
         driver.navigate().to(changePasswordUrl.trim());
 
         errorPage.assertCurrent();
         assertEquals("Action expired. Please continue with login now.", errorPage.getError());
 
-        events.expect(EventType.RESET_PASSWORD)
-          .client(clientId)
-          .session((String) null)
-          .user(userId)
-          .error(Errors.EXPIRED_CODE)
-          .assertEvent();
+        EventAssertion.assertError(events.poll()).type(EventType.RESET_PASSWORD_ERROR)
+          .clientId(clientId)
+          .sessionId(null)
+          .userId(userId)
+          .error(Errors.EXPIRED_CODE);
     }
 
     @Test
-    public void resetPasswordWithSpacesInUsername() throws IOException, MessagingException {
+    public void resetPasswordWithSpacesInUsername() throws IOException {
         resetPassword(" login-test ");
     }
 
     @Test
-    public void resetPasswordCancelChangeUser() throws IOException, MessagingException {
+    public void resetPasswordCancelChangeUser() {
         initiateResetPasswordFromResetPasswordPage("test-user@localhost");
 
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD).detail(Details.USERNAME, "test-user@localhost")
-                .session((String) null)
-                .detail(Details.EMAIL, "test-user@localhost").assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD).details(Details.USERNAME, "test-user@localhost")
+                .sessionId(null)
+                .details(Details.EMAIL, "test-user@localhost");
 
         loginPage.login("login@test.com", password);
 
-        EventRepresentation loginEvent = events.expectLogin().user(userId).detail(Details.USERNAME, "login@test.com").assertEvent();
+        EventRepresentation loginEvent = EventAssertion.expectLoginSuccess(events.poll()).userId(userId).details(Details.USERNAME, "login@test.com").getEvent();
 
         String code = oauth.parseLoginResponse().getCode();
         AccessTokenResponse tokenResponse = oauth.doAccessTokenRequest(code);
@@ -435,17 +496,22 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         assertEquals(200, tokenResponse.getStatusCode());
         assertEquals(userId, oauth.verifyToken(tokenResponse.getAccessToken()).getSubject());
 
-        events.expectCodeToToken(loginEvent.getDetails().get(Details.CODE_ID), loginEvent.getSessionId()).user(userId).assertEvent();
+        EventAssertion.expectCodeToTokenSuccess(events.poll())
+                .sessionId(loginEvent.getSessionId())
+                .userId(userId)
+                .details(Details.CODE_ID, loginEvent.getDetails().get(Details.CODE_ID))
+                .details(Details.REFRESH_TOKEN_TYPE, TokenUtil.TOKEN_TYPE_REFRESH)
+                .details(Details.CLIENT_AUTH_METHOD, ClientIdAndSecretAuthenticator.PROVIDER_ID);
     }
 
     @Test
-    public void resetPasswordByEmail() throws IOException, MessagingException {
+    public void resetPasswordByEmail() throws IOException {
         resetPassword("login@test.com");
     }
 
     @Test
-    public void resetPasswordBackButton() throws IOException, MessagingException {
-        loginPage.open();
+    public void resetPasswordBackButton() {
+        oauth.openLoginForm();
         loginPage.login("login@test.com", "wrongpassword");
         loginPage.resetPassword();
         resetPasswordPage.assertCurrent();
@@ -454,7 +520,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     private void configureForceLogin(String value) {
-        AuthenticationExecutionInfoRepresentation sendEmailExec = testRealm()
+        AuthenticationExecutionInfoRepresentation sendEmailExec = managedRealm.admin()
                 .flows()
                 .getExecutions(DefaultAuthenticationFlows.RESET_CREDENTIALS_FLOW)
                 .stream()
@@ -463,31 +529,30 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         AuthenticatorConfigRepresentation config = new AuthenticatorConfigRepresentation();
         config.setAlias("reset-password-config");
         config.getConfig().put(ResetCredentialEmail.FORCE_LOGIN, value);
-        String configId = ApiUtil.getCreatedId(testRealm().flows().newExecutionConfig(sendEmailExec.getId(), config));
+        String configId = ApiUtil.getCreatedId(managedRealm.admin().flows().newExecutionConfig(sendEmailExec.getId(), config));
         getCleanup().addAuthenticationConfigId(configId);
     }
 
-    private String resetPassword(String username) throws IOException, MessagingException {
+    private String resetPassword(String username) throws IOException {
         return resetPassword(username, "resetPassword", false);
     }
 
-    private String resetPassword(String username, String password) throws IOException, MessagingException {
+    private String resetPassword(String username, String password) throws IOException {
         return resetPassword(username, password, false);
     }
 
-    private String resetPassword(String username, String password, boolean relogin) throws IOException, MessagingException {
+    private String resetPassword(String username, String password, boolean relogin) throws IOException {
         initiateResetPasswordFromResetPasswordPage(username);
 
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                .user(userId)
-                .detail(Details.USERNAME, username.trim())
-                .detail(Details.EMAIL, "login@test.com")
-                .session((String)null)
-                .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                .userId(userId)
+                .details(Details.USERNAME, username.trim())
+                .details(Details.EMAIL, "login@test.com")
+                .sessionId(null);
 
-        assertEquals(expectedMessagesCount, greenMail.getReceivedMessages().length);
+        assertEquals(expectedMessagesCount, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[greenMail.getReceivedMessages().length - 1];
+        MimeMessage message = mail.getReceivedMessages()[mail.getReceivedMessages().length - 1];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
@@ -499,57 +564,57 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         updatePasswordPage.changePassword(password, password);
 
-        events.expectRequiredAction(EventType.UPDATE_PASSWORD).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).user(userId).detail(Details.USERNAME, username.trim()).assertEvent();
-        events.expectRequiredAction(EventType.UPDATE_CREDENTIAL).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).user(userId).detail(Details.USERNAME, username.trim()).assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_PASSWORD).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).userId(userId).details(Details.USERNAME, username.trim());
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_CREDENTIAL).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).userId(userId).details(Details.USERNAME, username.trim());
 
         if (relogin) {
             // relogin is forced therefore the info page should be displayed
-            Assert.assertEquals("Your account has been updated.", infoPage.getInfo());
+            Assertions.assertEquals("Your account has been updated.", infoPage.getInfo());
             String backToAppLink = infoPage.getBackToApplicationLink();
-            ClientRepresentation client = ApiUtil.findClientByClientId(adminClient.realm("test"), "test-app").toRepresentation();
-            Assert.assertEquals(backToAppLink, client.getBaseUrl());
-            loginPage.open();
+            ClientRepresentation client = AdminApiUtil.findClientByClientId(adminClient.realm("test"), "test-app").toRepresentation();
+            Assertions.assertEquals(backToAppLink, client.getBaseUrl());
+            oauth.openLoginForm();
             loginPage.assertCurrent();
         } else {
             // continue to app because it is the same browser and auth session exists
-            assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
-            EventRepresentation loginEvent = events.expectLogin().user(userId).detail(Details.USERNAME, username.trim()).assertEvent();
+            EventRepresentation loginEvent = EventAssertion.expectLoginSuccess(events.poll()).userId(userId).details(Details.USERNAME, username.trim()).getEvent();
             String sessionId = loginEvent.getSessionId();
 
             AccessTokenResponse tokenResponse = sendTokenRequestAndGetResponse(loginEvent);
             oauth.logoutForm().idTokenHint(tokenResponse.getIdToken()).withRedirect().open();
 
-            events.expectLogout(sessionId).user(userId).session(sessionId).assertEvent();
+            EventAssertion.expectLogoutSuccess(events.poll()).sessionId(sessionId).userId(userId);
 
-            loginPage.open();
+            oauth.openLoginForm();
 
             loginPage.login("login-test", password);
 
-            loginEvent = events.expectLogin().user(userId).detail(Details.USERNAME, "login-test").assertEvent();
+            loginEvent = EventAssertion.expectLoginSuccess(events.poll()).userId(userId).details(Details.USERNAME, "login-test").getEvent();
             sessionId = loginEvent.getSessionId();
 
-            assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
             tokenResponse = sendTokenRequestAndGetResponse(loginEvent);
             oauth.logoutForm().idTokenHint(tokenResponse.getIdToken()).withRedirect().open();
 
-            events.expectLogout(sessionId).user(userId).session(sessionId).assertEvent();
+            EventAssertion.expectLogoutSuccess(events.poll()).sessionId(sessionId).userId(userId);
         }
 
         return changePasswordUrl;
     }
 
-    private void resetPasswordInvalidPassword(String username, String password, String error) throws IOException, MessagingException {
+    private void resetPasswordInvalidPassword(String username, String password, String error) throws IOException {
 
         initiateResetPasswordFromResetPasswordPage(username);
 
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD).user(userId).session((String) null)
-                .detail(Details.USERNAME, username).detail(Details.EMAIL, "login@test.com").assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD).userId(userId).sessionId(null)
+                .details(Details.USERNAME, username).details(Details.EMAIL, "login@test.com");
 
-        assertEquals(expectedMessagesCount, greenMail.getReceivedMessages().length);
+        assertEquals(expectedMessagesCount, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[greenMail.getReceivedMessages().length - 1];
+        MimeMessage message = mail.getReceivedMessages()[mail.getReceivedMessages().length - 1];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
@@ -562,12 +627,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         updatePasswordPage.assertCurrent();
         assertEquals(error, updatePasswordPage.getError());
-        events.expectRequiredAction(EventType.UPDATE_CREDENTIAL_ERROR).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).user(userId).detail(Details.USERNAME, "login-test").assertEvent().getSessionId();
-        events.expectRequiredAction(EventType.UPDATE_PASSWORD_ERROR).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).user(userId).detail(Details.USERNAME, "login-test").assertEvent().getSessionId();
+        EventAssertion.assertError(events.poll()).type(EventType.UPDATE_CREDENTIAL_ERROR).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).userId(userId).details(Details.USERNAME, "login-test");
+        EventAssertion.assertError(events.poll()).type(EventType.UPDATE_PASSWORD_ERROR).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).userId(userId).details(Details.USERNAME, "login-test");
     }
 
     private void initiateResetPasswordFromResetPasswordPage(String username) {
-        loginPage.open();
+        oauth.openLoginForm();
         loginPage.resetPassword();
 
         resetPasswordPage.assertCurrent();
@@ -580,17 +645,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWrongEmail() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordWrongEmail() {
         initiateResetPasswordFromResetPasswordPage("invalid");
 
-        assertEquals(0, greenMail.getReceivedMessages().length);
+        assertEquals(0, mail.getReceivedMessages().length);
 
-        events.expectRequiredAction(EventType.RESET_PASSWORD).user((String) null).session((String) null).detail(Details.USERNAME, "invalid").removeDetail(Details.EMAIL).removeDetail(Details.CODE_ID).error("user_not_found").assertEvent();
+        EventAssertion.assertError(events.poll()).type(EventType.RESET_PASSWORD_ERROR).userId(null).sessionId(null).details(Details.USERNAME, "invalid").withoutDetails(Details.EMAIL).error("user_not_found");
     }
 
     @Test
-    public void resetPasswordMissingUsername() throws IOException, MessagingException, InterruptedException {
-        loginPage.open();
+    public void resetPasswordMissingUsername() {
+        oauth.openLoginForm();
         loginPage.resetPassword();
 
         resetPasswordPage.assertCurrent();
@@ -601,28 +666,27 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         assertEquals("Please specify username.", resetPasswordPage.getUsernameError());
 
-        assertEquals(0, greenMail.getReceivedMessages().length);
+        assertEquals(0, mail.getReceivedMessages().length);
 
-        events.expectRequiredAction(EventType.RESET_PASSWORD).user((String) null).session((String) null).clearDetails().error("username_missing").assertEvent();
-
+        EventAssertion.assertError(events.poll()).type(EventType.RESET_PASSWORD_ERROR).userId(null).sessionId(null).error("username_missing");
     }
 
     @Test
-    public void resetPasswordExpiredCode() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCode() throws IOException {
         initiateResetPasswordFromResetPasswordPage("login-test");
 
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                .session((String)null)
-                .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                .sessionId(null)
+                .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
         try {
-            setTimeOffset(360);
+            timeOffSet.set(360);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -630,35 +694,35 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeShort() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeShort() throws IOException {
         final AtomicInteger originalValue = new AtomicInteger();
 
-        RealmRepresentation realmRep = testRealm().toRepresentation();
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
         originalValue.set(realmRep.getActionTokenGeneratedByUserLifespan());
         realmRep.setActionTokenGeneratedByUserLifespan(60);
-        testRealm().update(realmRep);
+        managedRealm.admin().update(realmRep);
 
         try {
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -666,37 +730,37 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setActionTokenGeneratedByUserLifespan(originalValue.get());
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeShortPerActionLifespan() throws IOException, MessagingException, InterruptedException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void resetPasswordExpiredCodeShortPerActionLifespan() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
-        realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().resetCredentialsLifespan(60).build());
+        managedRealm.admin().update(realmRep);
 
         try {
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -704,39 +768,39 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeShortPerActionMultipleTimeouts() throws IOException, MessagingException, InterruptedException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void resetPasswordExpiredCodeShortPerActionMultipleTimeouts() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
-        realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
+        realmRep.setAttributes(RealmAttributesBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
 
-        testRealm().update(realmRep);
+        managedRealm.admin().update(realmRep);
 
         try {
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -744,156 +808,156 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     // KEYCLOAK-4016
     @Test
-    public void resetPasswordExpiredCodeAndAuthSession() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeAndAuthSession() throws IOException {
         final AtomicInteger originalValue = new AtomicInteger();
 
-        RealmRepresentation realmRep = testRealm().toRepresentation();
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
         originalValue.set(realmRep.getActionTokenGeneratedByUserLifespan());
         realmRep.setActionTokenGeneratedByUserLifespan(60);
-        testRealm().update(realmRep);
+        managedRealm.admin().update(realmRep);
 
         try {
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message).replace("&amp;", "&");
 
             log.debug("Removing cookies."); // This is necessary to delete KC_RESTART cookie that is restricted to /auth/realms/test path
             driver.manage().deleteAllCookies();
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             log.debug("Going to reset password URI.");
             driver.navigate().to(changePasswordUrl.trim());
 
             errorPage.assertCurrent();
-            Assert.assertEquals("Action expired.", errorPage.getError());
+            Assertions.assertEquals("Action expired.", errorPage.getError());
             String backToAppLink = errorPage.getBackToApplicationLink();
-            Assert.assertTrue(backToAppLink.endsWith("/app/auth"));
+            Assertions.assertTrue(backToAppLink.endsWith("/app/auth"));
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setActionTokenGeneratedByUserLifespan(originalValue.get());
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeAndAuthSessionPerActionLifespan() throws IOException, MessagingException, InterruptedException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void resetPasswordExpiredCodeAndAuthSessionPerActionLifespan() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
-        realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().resetCredentialsLifespan(60).build());
+        managedRealm.admin().update(realmRep);
 
         try {
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message).replace("&amp;", "&");
 
             log.debug("Removing cookies."); // This is necessary to delete KC_RESTART cookie that is restricted to /auth/realms/test path
             driver.manage().deleteAllCookies();
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             log.debug("Going to reset password URI.");
             URLUtils.navigateToUri(changePasswordUrl.trim());
 
             errorPage.assertCurrent();
-            Assert.assertEquals("Action expired.", errorPage.getError());
+            Assertions.assertEquals("Action expired.", errorPage.getError());
             String backToAppLink = errorPage.getBackToApplicationLink();
-            Assert.assertTrue(backToAppLink.endsWith("/app/auth"));
+            Assertions.assertTrue(backToAppLink.endsWith("/app/auth"));
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeAndAuthSessionPerActionMultipleTimeouts() throws IOException, MessagingException, InterruptedException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void resetPasswordExpiredCodeAndAuthSessionPerActionMultipleTimeouts() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
-        realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
+        managedRealm.admin().update(realmRep);
 
         try {
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message).replace("&amp;", "&");
 
             log.debug("Removing cookies."); // This is necessary to delete KC_RESTART cookie that is restricted to /auth/realms/test path
             driver.manage().deleteAllCookies();
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             log.debug("Going to reset password URI.");
             driver.navigate().to(changePasswordUrl.trim());
 
             errorPage.assertCurrent();
-            Assert.assertEquals("Action expired.", errorPage.getError());
+            Assertions.assertEquals("Action expired.", errorPage.getError());
             String backToAppLink = errorPage.getBackToApplicationLink();
-            Assert.assertTrue(backToAppLink.endsWith("/app/auth"));
+            Assertions.assertTrue(backToAppLink.endsWith("/app/auth"));
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     // KEYCLOAK-5061
     @Test
-    public void resetPasswordExpiredCodeForgotPasswordFlow() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeForgotPasswordFlow() throws IOException {
         final AtomicInteger originalValue = new AtomicInteger();
 
-        RealmRepresentation realmRep = testRealm().toRepresentation();
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
         originalValue.set(realmRep.getActionTokenGeneratedByUserLifespan());
         realmRep.setActionTokenGeneratedByUserLifespan(60);
-        testRealm().update(realmRep);
+        managedRealm.admin().update(realmRep);
 
         try {
             // Redirect directly to KC "forgot password" endpoint instead of "authenticate" endpoint
@@ -908,17 +972,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
             assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
             expectedMessagesCount++;
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -926,22 +990,22 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setActionTokenGeneratedByUserLifespan(originalValue.get());
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionLifespan() throws IOException, MessagingException, InterruptedException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionLifespan() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
-        realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().resetCredentialsLifespan(60).build());
+        managedRealm.admin().update(realmRep);
 
         try {
             // Redirect directly to KC "forgot password" endpoint instead of "authenticate" endpoint
@@ -956,17 +1020,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
             assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
             expectedMessagesCount++;
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -974,23 +1038,23 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionMultipleTimeouts() throws IOException, MessagingException, InterruptedException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionMultipleTimeouts() throws IOException {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
-        realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
-        testRealm().update(realmRep);
+        realmRep.setAttributes(RealmAttributesBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
+        managedRealm.admin().update(realmRep);
 
         try {
             // Redirect directly to KC "forgot password" endpoint instead of "authenticate" endpoint
@@ -1005,17 +1069,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
             assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
             expectedMessagesCount++;
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .session((String)null)
-                    .user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .sessionId(null)
+                    .userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
-            assertEquals(1, greenMail.getReceivedMessages().length);
+            assertEquals(1, mail.getReceivedMessages().length);
 
-            MimeMessage message = greenMail.getReceivedMessages()[0];
+            MimeMessage message = mail.getReceivedMessages()[0];
 
             String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-            setTimeOffset(70);
+            timeOffSet.set(70);
 
             driver.navigate().to(changePasswordUrl.trim());
 
@@ -1023,17 +1087,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("Action expired. Please start again.", loginPage.getError());
 
-            events.expectRequiredAction(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").client((String) null).user(userId).session((String) null).clearDetails().detail(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.EXECUTE_ACTION_TOKEN_ERROR).error("expired_code").clientId(null).userId(userId).sessionId(null).details(Details.ACTION, ResetCredentialsActionToken.TOKEN_TYPE);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
 
             realmRep.setAttributes(originalAttributes);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordDisabledUser() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordDisabledUser() {
         UserRepresentation user = findUser("login-test");
         try {
             user.setEnabled(false);
@@ -1041,9 +1105,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            assertEquals(0, greenMail.getReceivedMessages().length);
+            assertEquals(0, mail.getReceivedMessages().length);
 
-            events.expectRequiredAction(EventType.RESET_PASSWORD).session((String) null).user(userId).detail(Details.USERNAME, "login-test").removeDetail(Details.CODE_ID).error("user_disabled").assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.RESET_PASSWORD_ERROR).sessionId(null).userId(userId).details(Details.USERNAME, "login-test").error("user_disabled");
         } finally {
             user.setEnabled(true);
             updateUser(user);
@@ -1051,7 +1115,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordNoEmail() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordNoEmail() {
         final String email;
 
         UserRepresentation user = findUser("login-test");
@@ -1063,9 +1127,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             initiateResetPasswordFromResetPasswordPage("login-test");
 
-            assertEquals(0, greenMail.getReceivedMessages().length);
+            assertEquals(0, mail.getReceivedMessages().length);
 
-            events.expectRequiredAction(EventType.RESET_PASSWORD_ERROR).session((String) null).user(userId).detail(Details.USERNAME, "login-test").removeDetail(Details.CODE_ID).error("invalid_email").assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.RESET_PASSWORD_ERROR).sessionId(null).userId(userId).details(Details.USERNAME, "login-test").error("invalid_email");
         } finally {
             user.setEmail(email);
             updateUser(user);
@@ -1073,21 +1137,21 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWrongSmtp() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordWrongSmtp() {
         final String[] host = new String[1];
 
         Map<String, String> smtpConfig = new HashMap<>();
-        smtpConfig.putAll(testRealm().toRepresentation().getSmtpServer());
+        smtpConfig.putAll(managedRealm.admin().toRepresentation().getSmtpServer());
         host[0] =  smtpConfig.get("host");
         smtpConfig.put("host", "invalid_host");
-        RealmRepresentation realmRep = testRealm().toRepresentation();
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
         Map<String, String> oldSmtp = realmRep.getSmtpServer();
 
         try {
             realmRep.setSmtpServer(smtpConfig);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
 
-            loginPage.open();
+            oauth.openLoginForm();
             loginPage.resetPassword();
 
             resetPasswordPage.assertCurrent();
@@ -1098,37 +1162,37 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
 
-            assertEquals(0, greenMail.getReceivedMessages().length);
+            assertEquals(0, mail.getReceivedMessages().length);
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD_ERROR).user(userId)
-                    .session((String)null)
-                    .detail(Details.USERNAME, "login-test").removeDetail(Details.CODE_ID).error(Errors.EMAIL_SEND_FAILED).assertEvent();
+            EventAssertion.assertError(events.poll()).type(EventType.SEND_RESET_PASSWORD_ERROR).userId(userId)
+                    .sessionId(null)
+                    .details(Details.USERNAME, "login-test").error(Errors.EMAIL_SEND_FAILED);
         } finally {
             // Revert SMTP back
             realmRep.setSmtpServer(oldSmtp);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     private void setPasswordPolicy(String policy) {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
         realmRep.setPasswordPolicy(policy);
-        testRealm().update(realmRep);
+        managedRealm.admin().update(realmRep);
     }
 
     @Test
-    public void resetPasswordWithLengthPasswordPolicy() throws IOException, MessagingException {
+    public void resetPasswordWithLengthPasswordPolicy() throws IOException {
         setPasswordPolicy("length");
 
         initiateResetPasswordFromResetPasswordPage("login-test");
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD).session((String)null).user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD).sessionId(null).userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
         driver.navigate().to(changePasswordUrl.trim());
 
@@ -1138,42 +1202,42 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         assertEquals("Invalid password: minimum length 8.", resetPasswordPage.getErrorMessage());
 
-        events.expectRequiredAction(EventType.UPDATE_CREDENTIAL_ERROR).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).user(userId).detail(Details.USERNAME, "login-test").assertEvent().getSessionId();
-        events.expectRequiredAction(EventType.UPDATE_PASSWORD_ERROR).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).user(userId).detail(Details.USERNAME, "login-test").assertEvent().getSessionId();
+        EventAssertion.assertError(events.poll()).type(EventType.UPDATE_CREDENTIAL_ERROR).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).userId(userId).details(Details.USERNAME, "login-test");
+        EventAssertion.assertError(events.poll()).type(EventType.UPDATE_PASSWORD_ERROR).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).error(Errors.PASSWORD_REJECTED).userId(userId).details(Details.USERNAME, "login-test");
 
         updatePasswordPage.changePassword("resetPasswordWithPasswordPolicy", "resetPasswordWithPasswordPolicy");
 
-        events.expectRequiredAction(EventType.UPDATE_PASSWORD).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).user(userId).detail(Details.USERNAME, "login-test").assertEvent().getSessionId();
-        events.expectRequiredAction(EventType.UPDATE_CREDENTIAL).detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).user(userId).detail(Details.USERNAME, "login-test").assertEvent().getSessionId();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_PASSWORD).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).userId(userId).details(Details.USERNAME, "login-test");
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_CREDENTIAL).details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE).userId(userId).details(Details.USERNAME, "login-test");
 
-        assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
 
-        EventRepresentation loginEvent = events.expectLogin().user(userId).detail(Details.USERNAME, "login-test").assertEvent();
+        EventRepresentation loginEvent = EventAssertion.expectLoginSuccess(events.poll()).userId(userId).details(Details.USERNAME, "login-test").getEvent();
         String sessionId = loginEvent.getSessionId();
 
         AccessTokenResponse tokenResponse = sendTokenRequestAndGetResponse(loginEvent);
         oauth.logoutForm().idTokenHint(tokenResponse.getIdToken()).withRedirect().open();
 
-        events.expectLogout(sessionId).user(userId).session(sessionId).assertEvent();
+        EventAssertion.expectLogoutSuccess(events.poll()).sessionId(sessionId).userId(userId);
 
-        loginPage.open();
+        oauth.openLoginForm();
 
         loginPage.login("login-test", "resetPasswordWithPasswordPolicy");
 
-        assertEquals(RequestType.AUTH_RESPONSE, appPage.getRequestType());
+        Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
-        events.expectLogin().user(userId).detail(Details.USERNAME, "login-test").assertEvent();
+        EventAssertion.expectLoginSuccess(events.poll()).userId(userId).details(Details.USERNAME, "login-test");
     }
 
     @Test
-    public void resetPasswordBeforeUserIsDisabled() throws IOException, MessagingException {
+    public void resetPasswordBeforeUserIsDisabled() throws IOException {
         initiateResetPasswordFromResetPasswordPage("login-test");
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        assertEquals(1, mail.getReceivedMessages().length);
+        MimeMessage message = mail.getReceivedMessages()[0];
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD).session((String)null).user(userId).detail(Details.USERNAME, "login-test").detail(Details.EMAIL, "login@test.com").assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD).sessionId(null).userId(userId).details(Details.USERNAME, "login-test").details(Details.EMAIL, "login@test.com");
 
         UserRepresentation user = findUser("login-test");
         user.setEnabled(false);
@@ -1186,43 +1250,81 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWithPasswordHistoryPolicy() throws IOException, MessagingException {
+    public void resetPasswordWithPasswordHistoryPolicy() throws IOException {
         //Block passwords that are equal to previous passwords. Default value is 3.
         setPasswordPolicy("passwordHistory");
 
         try {
-            setTimeOffset(2000000);
+            timeOffSet.set(2000000);
             resetPassword("login-test", "password1");
 
             resetPasswordInvalidPassword("login-test", "password1", "Invalid password: must not be equal to any of last 3 passwords.");
 
-            setTimeOffset(4000000);
+            timeOffSet.set(4000000);
             resetPassword("login-test", "password2");
 
             resetPasswordInvalidPassword("login-test", "password1", "Invalid password: must not be equal to any of last 3 passwords.");
             resetPasswordInvalidPassword("login-test", "password2", "Invalid password: must not be equal to any of last 3 passwords.");
 
-            setTimeOffset(6000000);
+            timeOffSet.set(6000000);
             resetPassword("login-test", "password3");
 
             resetPasswordInvalidPassword("login-test", "password1", "Invalid password: must not be equal to any of last 3 passwords.");
             resetPasswordInvalidPassword("login-test", "password2", "Invalid password: must not be equal to any of last 3 passwords.");
             resetPasswordInvalidPassword("login-test", "password3", "Invalid password: must not be equal to any of last 3 passwords.");
 
-            setTimeOffset(8000000);
+            timeOffSet.set(8000000);
             resetPassword("login-test", password);
         } finally {
-            setTimeOffset(0);
+            timeOffSet.set(0);
+        }
+    }
+
+
+    @Test
+    public void resetPasswordLinkOpenedInNewBrowserWithDifferentLcoales() {
+        // given
+        String resetUri = oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials";
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
+
+        String origDefaultLocale = realmRep.getDefaultLocale();
+        Set<String> origSupportedLocales = realmRep.getSupportedLocales();
+        try {
+            realmRep.setDefaultLocale("en");
+            realmRep.addSupportedLocales("de");
+            realmRep.addSupportedLocales("it");
+            managedRealm.admin().update(realmRep);
+
+            // when
+            driver.navigate().to(resetUri);
+            // then
+            assertThat(PageUtils.getPageTitle(driver), is("Forgot Your Password?"));
+
+            // when
+            driver.manage().deleteAllCookies();
+            driver.navigate().to(resetUri + "?kc_locale=de");
+            // then
+            assertThat(PageUtils.getPageTitle(driver), is("Passwort vergessen?"));
+
+            // when
+            driver.manage().deleteAllCookies();
+            driver.navigate().to(resetUri + "?kc_locale=it");
+            // then
+            assertThat(PageUtils.getPageTitle(driver), is("Password dimenticata?"));
+        } finally {
+            realmRep.setDefaultLocale(origDefaultLocale);
+            realmRep.setSupportedLocales(origSupportedLocales);
+            managedRealm.admin().update(realmRep);
         }
     }
 
     @Test
-    public void resetPasswordLinkOpenedInNewBrowser() throws IOException, MessagingException {
+    public void resetPasswordLinkOpenedInNewBrowser() throws IOException {
         resetPasswordLinkOpenedInNewBrowser(Constants.ACCOUNT_MANAGEMENT_CLIENT_ID);
     }
 
 
-    private void resetPasswordLinkOpenedInNewBrowser(String expectedSystemClientId) throws IOException, MessagingException {
+    private void resetPasswordLinkOpenedInNewBrowser(String expectedSystemClientId) throws IOException {
         String username = "login-test";
         String resetUri = oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials";
         driver.navigate().to(resetUri);
@@ -1235,18 +1337,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         loginPage.assertCurrent();
         assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
 
-        events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                .user(userId)
-                .detail(Details.REDIRECT_URI,  oauth.AUTH_SERVER_ROOT + "/realms/test/account/")
-                .client(expectedSystemClientId)
-                .detail(Details.USERNAME, username)
-                .detail(Details.EMAIL, "login@test.com")
-                .session((String)null)
-                .assertEvent();
+        EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                .userId(userId)
+                .details(Details.REDIRECT_URI,  oauth.AUTH_SERVER_ROOT + "/realms/test/account/")
+                .clientId(expectedSystemClientId)
+                .details(Details.USERNAME, username)
+                .details(Details.EMAIL, "login@test.com")
+                .sessionId(null);
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
@@ -1271,7 +1372,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
     // KEYCLOAK-5982
     @Test
-    public void resetPasswordLinkOpenedInNewBrowserAndAccountClientRenamed() throws IOException, MessagingException {
+    public void resetPasswordLinkOpenedInNewBrowserAndAccountClientRenamed() throws IOException {
         // Temporarily rename client "account" . Revert it back after the test
         try (Closeable accountClientUpdater = ClientAttributeUpdater.forClient(adminClient, "test", Constants.ACCOUNT_MANAGEMENT_CLIENT_ID)
                 .setClientId("account-changed")
@@ -1284,8 +1385,8 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordLinkNewBrowserSessionPreserveClient() throws IOException, MessagingException {
-        loginPage.open();
+    public void resetPasswordLinkNewBrowserSessionPreserveClient() throws IOException {
+        oauth.openLoginForm();
         loginPage.resetPassword();
 
         resetPasswordPage.assertCurrent();
@@ -1295,9 +1396,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         loginPage.assertCurrent();
         assertEquals("You should receive an email shortly with further instructions.", loginPage.getSuccessMessage());
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
 
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
@@ -1315,17 +1416,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     // KEYCLOAK-15239
     @Test
     @IgnoreBrowserDriver(FirefoxDriver.class) // TODO: https://github.com/keycloak/keycloak/issues/20526
-    public void resetPasswordWithSpnegoEnabled() throws IOException, MessagingException {
+    public void resetPasswordWithSpnegoEnabled() throws IOException {
         KerberosUtils.assumeKerberosSupportExpected();
 
         // Just switch SPNEGO authenticator requirement to alternative. No real usage of SPNEGO needed for this test
-        AuthenticationExecutionModel.Requirement origRequirement = AbstractKerberosTest.updateKerberosAuthExecutionRequirement(AuthenticationExecutionModel.Requirement.ALTERNATIVE, testRealm());
+        AuthenticationExecutionModel.Requirement origRequirement = AbstractKerberosTest.updateKerberosAuthExecutionRequirement(AuthenticationExecutionModel.Requirement.ALTERNATIVE, managedRealm.admin());
 
         try {
             resetPassword("login-test");
         } finally {
             // Revert
-            AbstractKerberosTest.updateKerberosAuthExecutionRequirement(origRequirement, testRealm());
+            AbstractKerberosTest.updateKerberosAuthExecutionRequirement(origRequirement, managedRealm.admin());
         }
     }
 
@@ -1333,12 +1434,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     @Test
     public void failResetPasswordServiceAccount() {
         String username = ServiceAccountConstants.SERVICE_ACCOUNT_USER_PREFIX + "client-user";
-        UserRepresentation serviceAccount = testRealm().users()
+        UserRepresentation serviceAccount = managedRealm.admin().users()
                 .search(username).get(0);
 
         serviceAccount.toString();
 
-        UserResource serviceAccount1 = testRealm().users().get(serviceAccount.getId());
+        UserResource serviceAccount1 = managedRealm.admin().users().get(serviceAccount.getId());
 
         serviceAccount = serviceAccount1.toRepresentation();
         serviceAccount.setEmail("client-user@test.com");
@@ -1351,7 +1452,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         resetPasswordPage.changePassword(username);
 
-        loginPage.assertCurrent();
+        errorPage.assertCurrent();
         assertEquals("Invalid username or password.", errorPage.getError());
     }
 
@@ -1367,7 +1468,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             assertThat(tabUtil.getCountOfTabs(), Matchers.is(1));
 
-            loginPage.open();
+            oauth.openLoginForm();
             resetPasswordInNewTab(defaultUser, CLIENT_ID, REDIRECT_URI);
             assertThat(driver.getCurrentUrl(), Matchers.containsString(REDIRECT_URI));
 
@@ -1375,20 +1476,20 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
             logoutConfirmPage.assertCurrent();
             logoutConfirmPage.confirmLogout();
 
-            loginPage.open();
+            oauth.openLoginForm();
             resetPasswordInNewTab(defaultUser, CLIENT_ID, REDIRECT_URI);
             assertThat(driver.getCurrentUrl(), Matchers.containsString(REDIRECT_URI));
         }
     }
 
     @Test
-    public void resetPasswordInfoMessageWithDuplicateEmailsAllowed() throws IOException {
-        RealmRepresentation realmRep = testRealm().toRepresentation();
+    public void resetPasswordInfoMessageWithDuplicateEmailsAllowed() {
+        RealmRepresentation realmRep = managedRealm.admin().toRepresentation();
         Boolean originalLoginWithEmailAllowed = realmRep.isLoginWithEmailAllowed();
         Boolean originalDuplicateEmailsAllowed = realmRep.isDuplicateEmailsAllowed();
 
         try {
-            loginPage.open();
+            oauth.openLoginForm();
             loginPage.resetPassword();
 
             resetPasswordPage.assertCurrent();
@@ -1397,9 +1498,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             realmRep.setLoginWithEmailAllowed(false);
             realmRep.setDuplicateEmailsAllowed(true);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
 
-            loginPage.open();
+            oauth.openLoginForm();
             loginPage.resetPassword();
 
             resetPasswordPage.assertCurrent();
@@ -1408,7 +1509,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         } finally {
             realmRep.setLoginWithEmailAllowed(originalLoginWithEmailAllowed);
             realmRep.setDuplicateEmailsAllowed(originalDuplicateEmailsAllowed);
-            testRealm().update(realmRep);
+            managedRealm.admin().update(realmRep);
         }
 
     }
@@ -1418,12 +1519,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     public void changeEmailAddressAfterSendingEmail() throws IOException {
         initiateResetPasswordFromResetPasswordPage(defaultUser.getUsername());
 
-        assertEquals(1, greenMail.getReceivedMessages().length);
+        assertEquals(1, mail.getReceivedMessages().length);
 
-        MimeMessage message = greenMail.getReceivedMessages()[0];
+        MimeMessage message = mail.getReceivedMessages()[0];
         String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
-        UserResource user = testRealm().users().get(defaultUser.getId());
+        UserResource user = managedRealm.admin().users().get(defaultUser.getId());
         UserRepresentation userRep = user.toRepresentation();
         userRep.setEmail("vmuzikar@redhat.com");
         user.update(userRep);
@@ -1434,7 +1535,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWithLoginHint() throws IOException {
+    public void resetPasswordWithLoginHint() {
         // Redirect directly to KC "forgot password" endpoint instead of "authenticate" endpoint
         String loginUrl = oauth.loginForm().build();
         String forgotPasswordUrl = loginUrl.replace("/auth?", "/forgot-credentials?"); // Workaround, but works
@@ -1461,7 +1562,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         try (BrowserTabUtil browserTabUtil = BrowserTabUtil.getInstanceAndSetEnv(driver)) {
             events.clear();
 
-            final int emailCount = greenMail.getReceivedMessages().length;
+            final int emailCount = mail.getReceivedMessages().length;
 
             // In tab1 start "Forget password" flow and make sure the email is sent
             loginPage.assertCurrent();
@@ -1475,18 +1576,17 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
             String tab1Url = driver.getCurrentUrl();
 
-            events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
-                    .user(user.getId())
-                    .client(clientId)
-                    .detail(Details.REDIRECT_URI, redirectUri)
-                    .detail(Details.USERNAME, user.getUsername())
-                    .detail(Details.EMAIL, user.getEmail())
-                    .session((String) null)
-                    .assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.SEND_RESET_PASSWORD)
+                    .userId(user.getId())
+                    .clientId(clientId)
+                    .details(Details.REDIRECT_URI, redirectUri)
+                    .details(Details.USERNAME, user.getUsername())
+                    .details(Details.EMAIL, user.getEmail())
+                    .sessionId(null);
 
-            assertEquals(emailCount + 1, greenMail.getReceivedMessages().length);
+            assertEquals(emailCount + 1, mail.getReceivedMessages().length);
 
-            final MimeMessage message = greenMail.getReceivedMessages()[emailCount];
+            final MimeMessage message = mail.getReceivedMessages()[emailCount];
             final String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
 
             // Open link from email in the new tab
@@ -1495,21 +1595,20 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
             // Change password in tab2
             changePasswordOnUpdatePage(driver);
 
-            events.expectRequiredAction(EventType.UPDATE_PASSWORD)
-                    .detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
-                    .detail(Details.REDIRECT_URI, redirectUri)
-                    .client(clientId)
-                    .user(user.getId()).detail(Details.USERNAME, user.getUsername()).assertEvent();
-            events.expectRequiredAction(EventType.UPDATE_CREDENTIAL)
-                    .detail(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
-                    .detail(Details.REDIRECT_URI, redirectUri)
-                    .client(clientId)
-                    .user(user.getId()).detail(Details.USERNAME, user.getUsername()).assertEvent();
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_PASSWORD)
+                    .details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
+                    .details(Details.REDIRECT_URI, redirectUri)
+                    .clientId(clientId)
+                    .userId(user.getId()).details(Details.USERNAME, user.getUsername());
+            EventAssertion.expectRequiredAction(events.poll()).type(EventType.UPDATE_CREDENTIAL)
+                    .details(Details.CREDENTIAL_TYPE, PasswordCredentialModel.TYPE)
+                    .details(Details.REDIRECT_URI, redirectUri)
+                    .clientId(clientId)
+                    .userId(user.getId()).details(Details.USERNAME, user.getUsername());
 
             // User should be authenticated in current tab (tab2)
-            WaitUtils.waitUntilElement(appPage.getAccountLink()).is().clickable();
-            appPage.assertCurrent();
-            assertThat(driver.getCurrentUrl(), Matchers.containsString(redirectUri));
+            WaitUtils.waitForPageToLoad();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
 
             // Close tab2
             assertThat(browserTabUtil.getCountOfTabs(), Matchers.equalTo(2));
@@ -1527,8 +1626,8 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
             }
 
             // User should be automatically authenticated in tab1 as well (due authChecker.js on real browsers like FF or Chrome)
-            WaitUtils.waitUntilElement(appPage.getAccountLink()).is().clickable();
-            appPage.assertCurrent();
+            WaitUtils.waitForPageToLoad();
+            Assertions.assertTrue(oauth.parseLoginResponse().isSuccess());
         }
     }
 }
